--- a/晋国六卿.md
+++ b/晋国六卿.md
@@ -43,24 +43,60 @@ graph TB
 ```
 
 #### 先氏
+- 简略族谱
 
+```mermaid
+graph TB
+先丹木--族人-->先轸
+先友--族人-->先蔑
+先轸-->先且居
+先蔑--族人-->先都
+先蔑--族人-->先仆
+先且居-->先克
+先克-->先榖
+```
 #### 郤氏
+- 简略族谱
+
+```mermaid
+graph TB
+郤豹-->郤称
+郤豹-->郤芮
+郤豹--疑-->郤縠
+郤豹--疑-->郤溱
+郤豹-->郤义
+郤芮-->郤缺
+郤义-->郤扬
+郤称-->公子伯纠
+郤缺-->郤克
+郤扬-->郤犨
+郤扬-->步招
+郤扬-->蒲城鹊居
+郤克-->郤锜
+蒲城鹊居-->郤至
+蒲城鹊居-->郤毅
+```
 
 #### 胥氏
+- 简略族谱
 
 #### 栾氏
+- 简略族谱
 
 #### 韩氏
+- 简略族谱
 
 #### 中行氏
+- 简略族谱
 
 #### 智氏
+- 简略族谱
 
 #### 魏氏
-- 周朝公族，姬姓
+- 简略族谱
 
 #### 范氏
-- 祁姓
+- 简略族谱
 
 #### 赵氏
-- 嬴姓
+- 简略族谱
