更新六卿族谱

--- a/晋国六卿.md
+++ b/晋国六卿.md
@@ -26,6 +26,8 @@
 - 荀氏别族：荀骓、程郑
 
 #### 狐氏
+- 狐射姑与赵盾产生分歧，逃离晋国
+- 衍生贾氏
 - 简略族谱
 
 ```mermaid
@@ -43,6 +45,9 @@ graph TB
 ```
 
 #### 先氏
+- 多为武官
+- 先榖勾结犬戎作乱，被晋公驱逐
+- 衍生原氏
 - 简略族谱
 
 ```mermaid
@@ -56,6 +61,8 @@ graph TB
 先克-->先榖
 ```
 #### 郤氏
+- 三郤锜犨至，被晋厉公及胥童灭族
+- 衍生冀氏、步氏、温氏、苦成氏
 - 简略族谱
 
 ```mermaid
@@ -78,10 +85,36 @@ graph TB
 ```
 
 #### 胥氏
+- 胥童灭三郤，后被栾书、中行偃灭
 - 简略族谱
 
+```mermaid
+graph TB
+胥臣-->胥甲
+胥婴
+胥甲-->胥克
+胥克-->胥童
+```
+
 #### 栾氏
+- 栾氏之乱，栾盈被六卿联手击败
 - 简略族谱
+
+```mermaid
+graph TB
+栾宾-->栾成
+栾成-->栾枝
+栾枝-->栾盾
+栾盾-->栾书
+栾盾--?-->栾京庐
+栾书-->栾黡
+栾书-->栾钺
+栾书-->栾纠
+栾黡-->栾盈
+栾黡-->栾鲂
+栾黡-->栾豹
+栾黡-->栾乐
+```
 
 #### 韩氏
 - 简略族谱
@@ -96,7 +129,14 @@ graph TB
 - 简略族谱
 
 #### 范氏
+- 源出被灭杜国公子，来晋为士师，掌刑法
+- 衍生杜氏、士氏
 - 简略族谱
+
+```mermaid
+graph TB
+隰叔-->士蒍
+```
 
 #### 赵氏
 - 简略族谱
