--- a/晋国六卿.md
+++ b/晋国六卿.md
@@ -98,6 +98,7 @@ graph TB
 
 #### 栾氏
 - 栾氏之乱，栾盈被六卿联手击败
+- 衍生卞氏
 - 简略族谱
 
 ```mermaid
@@ -119,23 +120,75 @@ graph TB
 #### 韩氏
 - 简略族谱
 
-#### 中行氏
+#### 中行氏、智氏
+- 荀息假途伐虢
+- 范吉射与中行寅攻打晋定公，被国人赶走
+- 智瑶败于晋阳之战，被三家分智
+- 源出荀氏、原氏，荀林父为中行氏，荀骓为程氏，荀首为智氏。
+- 智氏衍生辅氏、涂氏。
 - 简略族谱
-
-#### 智氏
-- 简略族谱
+ 
+```mermaid
+graph TB
+荀息-->荀逝敖
+荀逝敖-->荀林父
+荀逝敖-->荀骓
+荀逝敖-->荀首
+荀林父-->荀庚
+荀骓-->荀滑
+荀骓--孙-->程季
+荀首-->智罃
+荀庚-->荀偃
+程季-->程郑
+智罃-->智朔
+荀偃-->荀吴
+智朔-->荀盈
+荀吴-->荀寅
+荀盈-->荀跞
+荀跞-->荀申
+荀跞-->智果
+荀跞-->智徐吾
+荀申-->智宵
+荀申-->智瑶
+智瑶-->智颜
+智瑶-->智开
+智宵-->智国
+智宵-->智宽
+```
 
 #### 魏氏
 - 简略族谱
 
 #### 范氏
 - 源出被灭杜国公子，来晋为士师，掌刑法
-- 衍生杜氏、士氏
+- 源出杜氏、士氏，衍生范氏、随氏、巩氏、彘氏、刘氏
+- 士雃是刘邦祖先
+- 范吉射与中行寅攻打晋定公，被国人赶走
 - 简略族谱
 
 ```mermaid
 graph TB
 隰叔-->士蒍
+隰叔-->杜原款
+士蒍-->士缺
+士蒍-->士榖
+士缺-->士会
+士缺-->士穆子
+士缺--?-->士朔
+士会-->士燮
+士会-->士雃
+士会-->士鲂
+士穆子-->士渥浊
+士朔--族人-->士富
+士燮-->士匄
+士渥浊-->士弱
+士雃-->刘明
+士匄-->士鞅
+士弱-->士瑕
+刘明-->刘远
+士鞅-->范昭子
+士瑕-->士弥牟
+刘远-->刘阳
 ```
 
 #### 赵氏
