完成主要族谱

--- a/晋国六卿.md
+++ b/晋国六卿.md
@@ -26,7 +26,7 @@
 - 荀氏别族：荀骓、程郑
 
 #### 狐氏
-- 狐射姑与赵盾产生分歧，逃离晋国
+- 狐射姑与赵盾因立太子产生分歧，逃离晋国
 - 衍生贾氏
 - 简略族谱
 
@@ -118,7 +118,23 @@ graph TB
 ```
 
 #### 韩氏
+- 衍生箕氏、蔺氏
 - 简略族谱
+
+```mermaid
+graph TB
+韩万-->韩赇伯
+韩赇伯-->韩简
+韩简-->韩與
+韩與-->韩厥
+韩厥-->韩无忌
+韩厥-->韩起
+韩起-->韩须
+韩无忌-->箕襄
+韩须-->韩不信
+韩不信-->韩庚
+韩庚-->韩康子
+```
 
 #### 中行氏、智氏
 - 荀息假途伐虢
@@ -157,7 +173,26 @@ graph TB
 ```
 
 #### 魏氏
+- 豫让出于毕氏
+- 源出毕氏。衍生令狐氏、吕氏
 - 简略族谱
+
+```mermaid
+graph TB
+毕万-->芒季
+芒季-->魏犨
+芒季-->魏寿余
+魏犨-->魏悼子
+魏犨-->魏颗
+魏寿余-->吕锜
+魏悼子-->魏绛
+魏颗-->魏颉
+魏绛-->魏献子
+魏绛-->魏戊
+魏献子-->魏取
+魏取-->魏曼多
+魏曼多-->魏驹
+```
 
 #### 范氏
 - 源出被灭杜国公子，来晋为士师，掌刑法
@@ -192,4 +227,26 @@ graph TB
 ```
 
 #### 赵氏
+- 衍生梁氏、原氏、屏氏、楼氏、邯郸氏
 - 简略族谱
+
+```mermaid
+graph TB
+赵夙-->赵共孟
+赵共孟-->赵衰
+赵衰-->赵盾
+赵衰-->赵同
+赵衰-->赵括
+赵衰-->赵婴齐
+赵衰-->赵穿
+赵盾-->赵朔
+赵穿-->赵旃
+赵朔-->赵武
+赵旃-->赵胜
+赵武-->赵成
+赵胜-->赵午
+赵成-->赵鞅
+赵午-->赵稷
+赵鞅-->赵伯鲁
+赵鞅-->赵毋恤
+```
