確定主鍵編號

--- a/字段說明.md
+++ b/字段說明.md
@@ -2,7 +2,7 @@
 
 字段名稱|字段描述|字段類型|說明
 --|--|--|--
-索引號|int|主鍵，唯一數值索引
+索引號|int|主鍵，唯一數值索引，每卷占200號
 慣用名|str|WIKI百科中常規用名，如無沿用其它
 通鑒名|array|通鑒內出現的指示此人的所有名稱
 通鑒目錄|int|外鍵，通鑒內首次出現的目錄編號
