更新至卷五第14節

--- a/字段說明.md
+++ b/字段說明.md
@@ -23,6 +23,6 @@
 失位年|int|統治者的失位年，以負號表示公元前
 統治政權|str|
 從屬政權|array|可能從屬多個政權
-生僻度|int|1-維基百科無此詞條；2-維基、百度均無此詞條；3-網絡搜索中基本無此人相關檔案
+生僻度|int|1-維基百科無此詞條；2-維基、百度均無此詞條；3-網絡搜索中基本無此人相關檔案；4-歷史上從未記載過真名，以代稱或另一人關係名出現
 簡述|str|簡要描述此人事跡
 備注|str|
