更新至卷六第6節

--- a/筆記/资治通鉴5.md
+++ b/筆記/资治通鉴5.md
@@ -86,6 +86,7 @@ graph TB
 
 秦昭襄王--生父-->悼太子
 秦昭襄王--生父-->秦孝文王
+唐太后--生母-->秦孝文王
 秦孝文王--生父-->秦庄襄王
 秦孝文王--生父-->子傒
 夏姬--生母-->秦庄襄王
@@ -97,7 +98,7 @@ graph TB
 classDef male fill:#AEBDFA,stroke-width:2px
 classDef female fill:#FAB7AE,stroke-dasharray:5,5
 class 秦昭襄王,秦孝文王,秦庄襄王,秦始皇 male
-class 夏姬,华阳太后,赵姬 female
+class 唐太后,夏姬,华阳太后,赵姬 female
 ```
 
 ## 10516 周赧王崩
