整理年代事件，調整結構，添加韓國世系

--- a/備忘.md
+++ b/備忘.md
@@ -5,7 +5,7 @@
 - 龍陽君：魏安釐王男寵，龍陽之好來源
 - 莊子
 - 莊蹻：楚頃襄王將領，奪取滇，建立滇國
-- 李冰：都江堰
+- 李冰：都江堰，其子李二郎
 - 觸子：齊湣王大將，參與齊滅宋之戰
 - 李談：勸平原君散盡家財保衛邯鄲
 - 唐舉：魏國相師，給蔡澤相面
@@ -15,3 +15,6 @@
 - 鶡冠子：楚國隱士，道家
 - 惠施：名家代表，合縱，莊子好友
 - 羌瘣
+- 尉繚
+- 释利房：公元前243年見秦始皇宣揚佛法。朱士行《經錄》秦王政四年，西域沙門室利房等十八人，始齎佛經來華；王怪其狀，捕之系獄，旋放逐國外。
+- 頭曼：匈奴第一代單于
