添加記載年字段

--- a/字段說明.md
+++ b/字段說明.md
@@ -25,4 +25,6 @@
 從屬政權|array|可能從屬多個政權
 生僻度|int|1-維基百科無此詞條；2-維基、百度均無此詞條，散見其餘字典；3-網絡搜索中基本無此人相關檔案；4-歷史上從未記載過真名，以代稱或另一人關係名出現
 簡述|str|簡要描述此人事跡
+記載年|array|若無生卒得失年，可記錄歷史記載的活躍年份，取可查最早出現的年份。空表示來自通鑑內記載
+記載年備註|str|僅用於記載年的相關說明
 備注|str|
