更新至卷七第8節

--- a/備忘.md
+++ b/備忘.md
@@ -20,3 +20,9 @@
 - 頭曼：匈奴第一代單于
 - 慎到
 - 田光：爲激勵荊軻自刎
+- 史祿：修建靈渠
+- 譯吁宋：西甌王，秦甌戰爭中被殺
+- 方仙道人物補遺
+    - 戰國：正伯僑、充尚、河上公
+    - 秦朝：安期生、韓終、侯生、石生
+    - 漢朝：李少君、謬忌、少翁、欒大、公孫卿、于吉
