調整楚國世系圖

--- a/專項/各國世系圖表/楚國世系圖.md
+++ b/專項/各國世系圖表/楚國世系圖.md
@@ -140,7 +140,8 @@ subgraph 東周
         楚平王15-->楚昭王16                  
     end
     subgraph 戰國
-        楚昭王16-->楚惠王17 
+        太子建-->白公勝
+        楚昭王16-->楚惠王17
         楚惠王17-->楚簡王18
         楚簡王18-->楚聲王19
         楚聲王19-->楚悼王20
@@ -161,7 +162,7 @@ subgraph 東周
 end
 
 subgraph 秦朝
-    楚頃襄王25--楚懷王孫-->楚義帝1
+    昌平君30--楚懷王孫-->楚義帝1
 end
 
 ```
