--- a/字段說明.md
+++ b/字段說明.md
@@ -4,8 +4,8 @@
 --|--|--|--
 索引號|int|主鍵，唯一數值索引，每卷占200號
 慣用名|str|WIKI百科中常規用名，如無沿用其它
-通鑒名|array|通鑒內出現的指示此人的所有名稱
-通鑒目錄|int|外鍵，通鑒內首次出現的目錄編號
+通鑑名|array|通鑒內出現的指示此人的所有名稱
+通鑑目錄|int|外鍵，通鑑內首次出現的目錄編號
 出處|int|空-常規正文，此時代人物；1-臣光曰；2-常規正文，提及之後時代人物;3-常規正文，提及之前時代人物
 女性|bool|
 別稱|array|常見的別稱
