周朝世系圖表

--- a/專項/各國世系圖表/楚國世系圖.md
+++ b/專項/各國世系圖表/楚國世系圖.md
@@ -5,11 +5,7 @@
 ```mermaid
 graph TB
 
-subgraph 上古
-    鬻熊
-end
-
-subgraph 灰色時代
+subgraph 先楚
     鬻熊-->熊麗
     熊麗-->熊狂
 end
@@ -78,17 +74,13 @@ end
 ```mermaid
 graph TB
 
-subgraph 上古
-    鬻熊1
-end
-
-subgraph 灰色時代
-    鬻熊1-->熊麗-2
-    熊麗-2-->熊狂-1
+subgraph 先楚
+    鬻熊1-->熊麗2
+    熊麗2-->熊狂3
 end
 
 subgraph 西周
-    熊狂-1-->熊繹1
+    熊狂3-->熊繹1
     熊繹1-->熊艾2
     熊艾2-->熊䵣3
     熊䵣3-->熊勝4
