更新卷七人物信息

--- a/字段說明.md
+++ b/字段說明.md
@@ -7,7 +7,7 @@
 通鑑名|array|通鑒內出現的指示此人的所有名稱
 通鑑目錄|int|外鍵，通鑑內首次出現的目錄編號
 出處|int|空-常規正文，此時代人物；1-臣光曰；2-常規正文，提及之後時代人物;3-常規正文，提及之前時代人物
-女性|bool|
+女性|bool|空-男；1-女；0-太監
 別稱|array|常見的別稱
 姓|str|
 名|array|可能有多個，下同
@@ -17,8 +17,8 @@
 謚|array|
 生年|int|出生年，以負號表示公元前，未知為0
 卒年|int|死亡年，以負號表示公元前，未知為0
-出生月日|date|
-去世月日|date|
+出生月日|str|文本表示，可能只有月
+去世月日|str|文本表示，可能只有月
 得位年|int|統治者的得位年，以負號表示公元前
 失位年|int|統治者的失位年，以負號表示公元前
 統治政權|str|
