--- a/備忘.md
+++ b/備忘.md
@@ -4,28 +4,37 @@
 - 鐘離春：齊宣王后，無鹽
 - 宿瘤女：齊湣王后
 - 龍陽君：魏安釐王男寵，龍陽之好來源
-- 莊子
 - 莊蹻：楚頃襄王將領，奪取滇，建立滇國
 - 李冰：都江堰，其子李二郎
+- 史祿：靈渠總設計師
 - 觸子：齊湣王大將，參與齊滅宋之戰
 - 李談：勸平原君散盡家財保衛邯鄲
 - 唐舉：魏國相師，給蔡澤相面
 - 缪虮：燕國善兵者，與田單、莊蹻、衛鞅其名（可能就是樂毅）
 - 田巴：齊國辯士，敗於魯仲連
 - 唐玖：趙國內侍，探視廉頗尚能飯否者
-- 鶡冠子：楚國隱士，道家
-- 惠施：名家代表，合縱，莊子好友
 - 羌瘣
-- 尉繚
-- 释利房：公元前243年見秦始皇宣揚佛法。朱士行《經錄》秦王政四年，西域沙門室利房等十八人，始齎佛經來華；王怪其狀，捕之系獄，旋放逐國外。
-- 頭曼：匈奴第一代單于
-- 慎到
 - 田光：爲激勵荊軻自刎
-- 史祿：修建靈渠
-- 譯吁宋：西甌王，秦甌戰爭中被殺
+- 甘羅：呂不韋門客，秦上卿
+- 辛勝：秦王政將領，攻燕
+- 四夷
+    - 释利房：公元前243年見秦始皇宣揚佛法。朱士行《經錄》秦王政四年，西域沙門室利房等十八人，始齎佛經來華；王怪其狀，捕之系獄，旋放逐國外。
+    - 頭曼：匈奴第一代單于
+    - 冒頓：殺頭曼自立
+- 秦攻百越之戰
+    - 屠睢：第一次秦攻百越之戰將領
+    - 趙佗：南越王
+    - 任囂：第二次秦攻百越之戰將領
+    - 譯吁宋：百越西甌王，秦甌戰爭中被殺
+    - 桀駿：百越將領，替代譯吁宋
 - 方仙道人物補遺
     - 戰國：正伯僑、充尚、河上公
     - 秦朝：安期生、韓終、侯生、石生
     - 漢朝：李少君、謬忌、少翁、欒大、公孫卿、于吉
 - 商山四皓：秦末隱士東園公、夏黃公、綺里季、甪里
-- 甘羅：呂不韋門客，秦上卿
+- 諸子百家補遺
+    - 莊子
+    - 鶡冠子：楚國隱士，道家
+    - 惠施：名家代表，合縱，莊子好友
+    - 尉繚
+    - 慎到
