完成卷8第三節，秦末齊國政權整理

--- a/字段說明.md
+++ b/字段說明.md
@@ -1,5 +1,7 @@
 # 人物總表
 
+- 所有類數組數據以`|`符號分隔
+
 字段名稱|字段描述|字段類型|說明
 --|--|--|--
 索引號|int|主鍵，唯一數值索引，每卷占200號
@@ -21,7 +23,7 @@
 去世月日|str|文本表示，可能只有月
 得位年|int|統治者的得位年，以負號表示公元前
 失位年|int|統治者的失位年，以負號表示公元前
-統治政權|str|
+統治政權|str|可能統治多個政權，則得位年、失位年為全部時間；若多統治政權時間不連續，只取第一個，其余簡述中說明
 從屬政權|array|可能從屬多個政權
 生僻度|int|1-維基百科無此詞條；2-維基、百度均無此詞條，散見其餘字典；3-網絡搜索中基本無此人相關檔案；4-歷史上從未記載過真名，以代稱或另一人關係名出現
 簡述|str|簡要描述此人事跡
