更新至卷8節4

--- a/備忘.md
+++ b/備忘.md
@@ -10,7 +10,7 @@
 - 觸子：齊湣王大將，參與齊滅宋之戰
 - 李談：勸平原君散盡家財保衛邯鄲
 - 唐舉：魏國相師，給蔡澤相面
-- 缪虮：燕國善兵者，與田單、莊蹻、衛鞅其名（可能就是樂毅）
+- 缪虮：燕國善兵者，與田單、莊蹻、衛鞅齊名（可能就是樂毅）
 - 田巴：齊國辯士，敗於魯仲連
 - 唐玖：趙國內侍，探視廉頗尚能飯否者
 - 羌瘣
