--- a/字段說明.md
+++ b/字段說明.md
@@ -19,8 +19,8 @@
 謚|array|
 生年|int|出生年，以負號表示公元前，未知為0
 卒年|int|死亡年，以負號表示公元前，未知為0
-出生月日|str|文本表示，可能只有月
-去世月日|str|文本表示，可能只有月
+出生月日|str|文本表示，只有月格式*，有月日格式*.*
+去世月日|str|文本表示，只有月格式*，有月日格式*.*
 得位年|int|統治者的得位年，以負號表示公元前
 失位年|int|統治者的失位年，以負號表示公元前
 統治政權|str|可能統治多個政權，則得位年、失位年為全部時間；若多統治政權時間不連續，只取第一個，其余簡述中說明
