更新卷10人物及韓信戰績

--- a/筆記/资治通鉴10.md
+++ b/筆記/资治通鉴10.md
@@ -40,6 +40,17 @@
 
 ## 30208 汉定三齐
 > 韩信已定临淄->军广武
+- 劇辛說：龐煖易與耳！龍且說：韓信易與耳！
+- 韓信戰法喜玩花樣，尤其愛玩水，部分取勝有僥幸成分
+
+戰役|我敵比例|潛在危機|韓信打法
+--|--|--|--
+還定三秦之戰|?:?||僅獻策未領兵，後代加戲明修棧道、暗度陳倉
+京索之戰|?:?||騎兵應由李必、駱甲訓練，灌嬰統領，韓信可能主要是送兵的
+安邑之戰|?:?||假裝集結船只，主力用罌缶渡河閃擊魏豹
+井陘之戰|3:20|李左車|新兵背水一戰，騎兵拔旗易幟
+濰水之戰|?:20|龍且客|沙囊堵水、放水淹三軍
+垓下之戰|30:10||孔將軍、費將軍先破的楚軍，韓信乘之
 
 ## 30209 拒三分蒯彻佯狂
 > 韩信使人言汉王曰->佯狂为巫
