人物更新至卷11節7

--- a/備忘.md
+++ b/備忘.md
@@ -43,3 +43,11 @@
 - 韓談：秦末宦官，授子嬰令殺趙高
 - 蟣蝨：韓襄王子，韓王信父，與韓釐王爭位失敗
 - 司馬蒯聵：趙國劍客，與司馬錯同輩在趙的司馬氏先祖，玄孫/曾孫司馬卬
+- 虞姬：項羽妃
+- 毛蘋：吳芮妃，上邪作者（大概率杜撰）
+- 驺搖：東甌王
+- 季心：季布弟，游俠
+- 仙道、半仙
+    - 黃石公：傳張良兵法
+    - 赤松子：秦漢傳說仙人，張良自稱從游
+    - 王子喬：秦漢傳說仙人，周靈王太子，與赤松子并列為長生不老代表
