--- a/備忘.md
+++ b/備忘.md
@@ -20,8 +20,7 @@
 - 辛勝：秦王政將領，攻燕
 - 四夷
     - 释利房：公元前243年見秦始皇宣揚佛法。朱士行《經錄》秦王政四年，西域沙門室利房等十八人，始齎佛經來華；王怪其狀，捕之系獄，旋放逐國外。
-    - 頭曼：匈奴第一代單于
-    - 冒頓：殺頭曼自立
+    - 驺搖：東甌王
 - 秦攻百越之戰
     - 屠睢：第一次秦攻百越之戰將領
     - 趙佗：南越王
@@ -45,9 +44,10 @@
 - 司馬蒯聵：趙國劍客，與司馬錯同輩在趙的司馬氏先祖，玄孫/曾孫司馬卬
 - 虞姬：項羽妃
 - 毛蘋：吳芮妃，上邪作者（大概率杜撰）
-- 驺搖：東甌王
 - 季心：季布弟，游俠
 - 仙道、半仙
     - 黃石公：傳張良兵法
     - 赤松子：秦漢傳說仙人，張良自稱從游
     - 王子喬：秦漢傳說仙人，周靈王太子，與赤松子并列為長生不老代表
+- 浮丘伯：荀子弟子，劉交老師
+- 申培：浮丘伯弟子，儒家
