更新人物至卷13節3

--- a/備忘.md
+++ b/備忘.md
@@ -49,3 +49,7 @@
     - 宿瘤女：齊湣王后
     - 虞姬：項羽妃
     - 毛蘋：吳芮妃，上邪作者（大概率杜撰）
+- 馬王堆
+    - 辛追：-217至-168，馬王堆1號
+    - 利蒼：0至-185，馬王堆2號，長沙王吳臣丞相
+    - 利豨：利蒼辛追子，馬王堆3號
