更新卷13人物及年號相關內容

--- a/備忘.md
+++ b/備忘.md
@@ -2,7 +2,6 @@
 - 屈原
 - 宋玉、景差、唐勒：屈原後楚賦家
 - 南郭先生：齊宣王時期濫竽充數
-- 龍陽君：魏安釐王男寵，龍陽之好來源
 - 莊蹻：楚頃襄王將領，奪取滇，建立滇國
 - 李冰：都江堰，其子李二郎
 - 史祿：靈渠總設計師
@@ -54,3 +53,8 @@
     - 辛追：-217至-168，馬王堆1號
     - 利蒼：0至-185，馬王堆2號，長沙王吳臣丞相
     - 利豨：利蒼辛追子，馬王堆3號
+- 男宠
+    - 龍陽君：魏安釐王男寵，龍陽之好來源
+    - 籍儒：刘邦男宠
+    - 闳儒：惠帝男宠
+    - 文帝男宠：宦官赵同、北宫伯子、士人邓通
