--- a/備忘.md
+++ b/備忘.md
@@ -26,6 +26,7 @@
     - 戰國：正伯僑、充尚、河上公
     - 秦朝：安期生、韓終、侯生、石生
     - 漢朝：李少君、謬忌、少翁、欒大、公孫卿、于吉
+    - 淮南王門客八公：蘇非、李尚、左吳、陳由、伍被、毛周、雷被、晉昌
 - 諸子百家補遺
     - 莊子
     - 鶡冠子：楚國隱士，道家
@@ -58,3 +59,4 @@
     - 籍儒：刘邦男宠
     - 闳儒：惠帝男宠
     - 文帝男宠：宦官赵同、北宫伯子、士人邓通
+- 王生：讓張釋之幫忙穿襪的處士。典故王生襪
