更新至卷16節6

--- a/備忘.md
+++ b/備忘.md
@@ -33,8 +33,6 @@
     - 惠施：名家代表，合縱，莊子好友
     - 尉繚
     - 慎到
-    - 浮丘伯：荀子弟子，劉交老師
-    - 申培：浮丘伯弟子，儒家
 - 肥銖：英布副將
 - 韓談：秦末宦官，授子嬰令殺趙高
 - 蟣蝨：韓襄王子，韓王信父，與韓釐王爭位失敗
@@ -45,6 +43,7 @@
     - 赤松子：秦漢傳說仙人，張良自稱從游
     - 王子喬：秦漢傳說仙人，周靈王太子，與赤松子并列為長生不老代表
 - 眾女
+    - 越女：越處女，善劍術，習於袁公。吳越春秋記載
     - 鐘離春：齊宣王后，無鹽
     - 宿瘤女：齊湣王后
     - 虞姬：項羽妃
@@ -63,3 +62,5 @@
 - 司馬季主：西漢卜筮者，令賈誼無言以對
 - 伏生：漢文帝時，出秦焚書時所藏尚書
 - 劇孟：游俠，周亞夫得劇孟頂一個侯國
+- 轅固生：漢景帝時湯武革命討論者，被竇太后拉去打野豬
+- 黃生：漢景帝時湯武革命討論者
