添加奇葩序列，筆記生成目錄

--- a/筆記/资治通鉴1.md
+++ b/筆記/资治通鉴1.md
@@ -10,8 +10,8 @@
     - 魏斯
     - 赵籍
     - 韩虔
-> 天下苟有桓、文之君，必奉礼义而征之。
-- 桓文之君没那么多，征之也未必能胜。三家分晋不是周天子的锅。
+- 天下苟有桓、文之君，必奉礼义而征之。
+    - 桓文之君没那么多，征之也未必能胜。三家分晋不是周天子的锅。
 
 ## 10102 三家滅智
 > 初，智宣子将以瑶为后->又何失人之足患哉
@@ -75,7 +75,7 @@ graph TB
 > 魏文侯以卜子夏->愿卒为弟子
 
 - 李悝观人五法：
-> 居视其所亲，富视其所与，达视其所举，穷视其所不为，贫视其所不取。
+    - 居视其所亲，富视其所与，达视其所举，穷视其所不为，贫视其所不取。
 
 ## 10106 吴起
 > 吴起者，卫人->是以哭之
