--- a/筆記/资治通鉴12.md
+++ b/筆記/资治通鉴12.md
@@ -38,7 +38,7 @@
 ## 30408 诛英布
 > 帝有疾->番阳人杀布兹乡民田舍
 
-- 英布自至至终维持愣逼人设，以吴芮的智商不会主动把女儿嫁出去，恐有隐情。所以吴臣才会自告奋勇搞死他姐夫，丝毫不留情面。
+- 英布自始至终维持愣逼人设，以吴芮的智商不会主动把女儿嫁出去，恐有隐情。所以吴臣才会自告奋勇搞死他姐夫，丝毫不留情面。
 
 ## 30409 治罪萧何
 > 周勃悉定代郡、雁门、云中地->欲令百姓闻吾过也
