--- a/筆記/资治通鉴16.md
+++ b/筆記/资治通鉴16.md
@@ -21,7 +21,7 @@
 ## 30803 腰斩晁错
 > 初，文帝且崩->吾亦恨之
 
-- 晁错无解决问题能力：平乱让景帝冲在前面；以公报袁盎私仇；看事情闹大竟然反要给吴国土地。而发现问题，早在贾谊时已发现了。晁错只是和下棋斗殴的景帝是性格相投，都是急脾气不计后果。
+- 晁错无解决问题能力：平乱让景帝冲在前面；以公报袁盎私仇；看事情闹大竟然反要给吴国土地。而发现问题，早在贾谊时已发现了。晁错只是和下棋斗殴的景帝性格相投，都是急脾气不计后果。
 
 ## 30804 七国之乱平
 > 袁盎、刘通至吴->王遂自杀
