--- a/筆記/资治通鉴2.md
+++ b/筆記/资治通鉴2.md
@@ -90,7 +90,7 @@ graph TB
 ## 10211 至顯王三十六年
 > 秦伐韩->子宣惠王立
 
-- 申不害死前珍惜一顰一笑破褲頭，死後開始腐敗造大門，如此的韓昭侯，是韓國最拿的出手的領導。
+- 死前珍惜一顰一笑破褲頭，死後開始腐敗造大門，如此的韓昭侯，是韓國最拿的出手的領導。
 
 ## 10212 蘇秦相六國
 > 初，洛阳人苏秦说秦王以兼天下之术->车骑辎重拟于王者
