卷17人物更新

--- a/備忘.md
+++ b/備忘.md
@@ -4,7 +4,6 @@
 - 南郭先生：齊宣王時期濫竽充數
 - 莊蹻：楚頃襄王將領，奪取滇，建立滇國
 - 李冰：都江堰，其子李二郎
-- 史祿：靈渠總設計師
 - 觸子：齊湣王大將，參與齊滅宋之戰
 - 李談：勸平原君散盡家財保衛邯鄲
 - 唐舉：魏國相師，給蔡澤相面
@@ -19,7 +18,6 @@
 - 四夷
     - 释利房：公元前243年見秦始皇宣揚佛法。朱士行《經錄》秦王政四年，西域沙門室利房等十八人，始齎佛經來華；王怪其狀，捕之系獄，旋放逐國外。
 - 秦攻百越之戰
-    - 屠睢：第一次秦攻百越之戰將領
     - 譯吁宋：百越西甌王，秦甌戰爭中被殺
     - 桀駿：百越將領，替代譯吁宋
 - 方仙道人物補遺
@@ -65,3 +63,7 @@
 - 轅固生：漢景帝時湯武革命討論者，被竇太后拉去打野豬
 - 黃生：漢景帝時湯武革命討論者
 - 騶寅：閩越王郢三子，射死首都附近大鱔為民除害後墮水犧牲，成白馬尊王、白馬三郎。
+- 盧他之：盧綰孫，世襲東胡盧王，-144年歸漢
+- 文翁：景帝末年創辦公立學校文翁石室
+- 竇綰：劉勝妻竇綰，墓出長信宮燈
+- 楚服：陳阿嬌顧巫女
