卷十八人物

--- a/備忘.md
+++ b/備忘.md
@@ -22,8 +22,8 @@
     - 桀駿：百越將領，替代譯吁宋
 - 方仙道人物補遺
     - 戰國：正伯僑、充尚、河上公
-    - 秦朝：安期生、韓終、侯生、石生
-    - 漢朝：李少君、謬忌、少翁、欒大、公孫卿、于吉
+    - 秦朝：韓終、侯生、石生
+    - 漢朝：少翁、欒大、公孫卿、于吉
     - 淮南王門客八公：蘇非、李尚、左吳、陳由、伍被、毛周、雷被、晉昌
 - 諸子百家補遺
     - 莊子
@@ -60,11 +60,8 @@
 - 司馬季主：西漢卜筮者，令賈誼無言以對
 - 伏生：漢文帝時，出秦焚書時所藏尚書
 - 劇孟：游俠，周亞夫得劇孟頂一個侯國
-- 轅固生：漢景帝時湯武革命討論者，被竇太后拉去打野豬
 - 黃生：漢景帝時湯武革命討論者
 - 騶寅：閩越王郢三子，射死首都附近大鱔為民除害後墮水犧牲，成白馬尊王、白馬三郎。
 - 盧他之：盧綰孫，世襲東胡盧王，-144年歸漢
 - 文翁：景帝末年創辦公立學校文翁石室
 - 竇綰：劉勝妻竇綰，墓出長信宮燈
-- 楚服：陳阿嬌顧巫女
-- 唐蒙：漢武帝時出使夜郎
