更新卷18人物

--- a/備忘.md
+++ b/備忘.md
@@ -14,11 +14,11 @@
 - 王生：讓張釋之幫忙穿襪的處士。典故王生襪
 - 司馬季主：西漢卜筮者，令賈誼無言以對
 - 伏生：漢文帝時，出秦焚書時所藏尚書
-- 劇孟：游俠，周亞夫得劇孟頂一個侯國
 - 黃生：漢景帝時湯武革命討論者
 - 文翁：景帝末年創辦公立學校文翁石室
 - 爰叔：袁盎兄子，勸劉嫖獻出長門宮
 - 東門京：漢武帝時期相馬者，作銅馬法
+- 高漸離：刺客音樂家
 
 
 - 將領
