更新至卷19節5

--- a/備忘.md
+++ b/備忘.md
@@ -20,6 +20,7 @@
 - 東門京：漢武帝時期相馬者，作銅馬法
 - 高漸離：刺客音樂家
 - 彭吳：漢武帝時滅朝鮮置滄海郡
+- 楊得意：司馬相如老鄉，狗監，舉薦給武帝
 
 
 - 將領
@@ -69,6 +70,7 @@
     - 虞姬：項羽妃
     - 毛蘋：吳芮妃，上邪作者（大概率杜撰）
     - 許負：女相師
+    - 劉陵：淮南王劉安女，口辯，間諜，與張次公通姦
 - 考古發掘相關
     - 辛追：-217至-168，馬王堆1號
     - 利蒼：0至-185，馬王堆2號，長沙王吳臣丞相
