--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -1,10 +1,11 @@
 # 奇葩序列
 
 - 拒絕升官發財：季札、子閭、王蠋
-- 後宮達人：田成子、中山靖王劉勝、田蚡
+- 後宮達人：田成子、中山靖王劉勝、田蚡、司馬炎
 - 烹子食子：易牙、樂羊
 - 人力大牛：翟璜
-- 愛士卒：吳起、李廣
+- 愛兵如子：吳起、李廣、衛青
+- 虐待士卒：霍去病、張飛
 - 招貓遞狗君王：無彊、宋康王
 - 餓死：齊桓公、趙武靈王、趙王劉友、周亞夫
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘
@@ -23,7 +24,17 @@
 - 苦逼一生：酈寄、申屠嘉
 - 二婚皇后：薄姬、孝景王皇后
 - 醜：孟嘗君、田蚡
-- 野獸搏鬥者：轅固生、賈夫人、馮婕妤
+- 野獸搏鬥者：轅固、賈夫人、馮婕妤
 - 被污盜嫂受金：陳平、直不疑
 - 坑爹：周亞夫子
 - 名廚：伊尹、易牙
+- 狗監馬監：楊得意、金日磾
+- 屠夫出身：姜子牙、聶政、樊噲、朱亥、何進、張飛
+
+# 雜說
+
+- 密康公：三女投奔，執意迎娶，被滅國
+- 祖己：堅持苦孝被繼母流放致死
+- 晉景公：掉糞坑而死
+- 燕王劉定國：庶母弟妻女兒三代亂倫王
+- 江都王劉建：通姦庶母妹妹，看人淹死或被狼咬死取樂，安排宮女與羊狗交。
