更新人物至卷19節8

--- a/備忘.md
+++ b/備忘.md
@@ -24,7 +24,7 @@
 
 
 - 將領
-    - 莊蹻：楚頃襄王將領，奪取滇，建立滇國
+    - 莊蹻：大盜，楚頃襄王將領，奪取滇，建立滇國
     - 觸子：齊湣王大將，參與齊滅宋之戰
     - 缪虮：燕國善兵者，與田單、莊蹻、衛鞅齊名（可能就是樂毅）
     - 羌瘣：秦末將領，隨王翦伐趙
@@ -40,7 +40,6 @@
     - 衛右渠：衛滿孫子，被漢武帝滅
     - 倉海君：秦時穢人君長，給張良提供刺秦的大力士
     - 騶寅：閩越王郢三子，射死首都附近大鱔為民除害後墮水犧牲，成白馬尊王、白馬三郎。
-    - 夜郎王
 - 方仙道人物補遺
     - 戰國：正伯僑、充尚、河上公
     - 秦朝：韓終、侯生、石生
