--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -19,17 +19,18 @@
 - 相面大師：呂公、劉邦、許負、唐舉
 - 感動中國好官：魏咎
 - 嘴賤：韓生、栗姬
-- 本來能贏站錯隊：李左車、龍且客
+- 站錯隊的智者：李左車、龍且客、伍被
 - 長壽：趙佗、張蒼、伏生
 - 苦逼一生：酈寄、申屠嘉
 - 二婚皇后：薄姬、孝景王皇后
-- 醜：孟嘗君、田蚡
+- 醜：楚穆王、孟嘗君、田蚡
 - 野獸搏鬥者：轅固、賈夫人、馮婕妤
 - 被污盜嫂受金：陳平、直不疑
 - 坑爹：周亞夫子
 - 名廚：伊尹、易牙
 - 狗監馬監：楊得意、金日磾
 - 屠夫出身：姜子牙、聶政、樊噲、朱亥、何進、張飛
+- 力能扛鼎：秦武王、項羽、淮南王劉長
 
 # 雜說
 
