更新至卷19節9

--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -28,9 +28,10 @@
 - 被污盜嫂受金：陳平、直不疑
 - 坑爹：周亞夫子
 - 名廚：伊尹、易牙
-- 狗監馬監：楊得意、金日磾
+- 狗監馬監：楊得意、金日磾、李延年
 - 屠夫出身：姜子牙、聶政、樊噲、朱亥、何進、張飛
 - 力能扛鼎：秦武王、項羽、淮南王劉長
+- 易與耳：劇辛、龍且、李廣
 
 # 雜說
 
