更新卷19人物

--- a/備忘.md
+++ b/備忘.md
@@ -21,6 +21,9 @@
 - 高漸離：刺客音樂家
 - 彭吳：漢武帝時滅朝鮮置滄海郡
 - 楊得意：司馬相如老鄉，狗監，舉薦給武帝
+- 暴利長：漢武帝時獻渥洼水中神馬，敦煌屯田囚徒
+- 巴寡婦清：受秦始皇賞識的女企業家，提供水銀
+- 烏氏倮：秦始皇時期畜牧富商
 
 
 - 將領
