--- a/備忘.md
+++ b/備忘.md
@@ -34,6 +34,7 @@
     - 辛勝：秦王政將領，攻燕
     - 常頞：秦始皇將領，出使夜郎
     - 肥銖：英布副將
+    - 漠北之戰封侯：路博德、卫山、复陆支、伊即轩
 - 四夷
     - 释利房：公元前243年見秦始皇宣揚佛法。朱士行《經錄》秦王政四年，西域沙門室利房等十八人，始齎佛經來華；王怪其狀，捕之系獄，旋放逐國外。
     - 秦攻百越之戰
