--- a/主要數據/字段說明.md
+++ b/主要數據/字段說明.md
@@ -25,7 +25,7 @@
 失位年|int|統治者的失位年，以負號表示公元前
 統治政權|str|可能統治多個政權，則得位年、失位年為全部時間；若多統治政權時間不連續，只取第一個，其余簡述中說明
 從屬政權|array|可能從屬多個政權
-生僻度|int|1-維基百科無此詞條；2-維基、百度均無此詞條，散見其餘字典；3-網絡搜索中基本無此人相關檔案；4-歷史上從未記載過真名，以代稱或另一人關係名出現
+生僻度|int|1-維基百科無此詞條；2-維基、百度均無此詞條，散見其餘字典；3-網絡搜索中基本無此人相關檔案；4-歷史上從未記載過真名，以代稱或另一人關係名出現；5-歷史上從未記載過真名，但其余文獻有詳述，或有一定知名度
 簡述|str|簡要描述此人事跡
 記載年|array|若無生卒得失年，可記錄歷史記載的活躍年份，取可查最早出現的年份。空表示來自通鑑內記載
 記載年備註|str|僅用於記載年的相關說明
