--- a/備忘.md
+++ b/備忘.md
@@ -24,6 +24,7 @@
 - 暴利長：漢武帝時獻渥洼水中神馬，敦煌屯田囚徒
 - 巴寡婦清：受秦始皇賞識的女企業家，提供水銀
 - 烏氏倮：秦始皇時期畜牧富商
+- 胡毋生：漢景帝博士，經學家
 
 
 - 將領
@@ -47,7 +48,7 @@
 - 方仙道人物補遺
     - 戰國：正伯僑、充尚、河上公
     - 秦朝：韓終、侯生、石生
-    - 漢朝：少翁、欒大、公孫卿、于吉
+    - 漢朝：公孫卿、于吉
     - 淮南王門客八公：蘇非、李尚、左吳、陳由、伍被、毛周、雷被、晉昌
 - 諸子百家補遺
     - 莊子
