--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -9,7 +9,7 @@
 - 招貓遞狗君王：無彊、宋康王
 - 餓死：齊桓公、趙武靈王、趙王劉友、周亞夫
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘
-- 智慧的父母：吳起卒母、陳嬰母、王陵之母
+- 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母
 - 龍陽君主：魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝
 - 絕望的父母：趙將括母、晁錯父、陳勝妻父
 - 給君主獻孕婦：呂不韋、春申君
@@ -30,7 +30,7 @@
 - 名廚：伊尹、易牙
 - 狗監馬監：楊得意、金日磾、李延年
 - 屠夫出身：姜子牙、聶政、樊噲、朱亥、何進、張飛
-- 力能扛鼎：秦武王、項羽、淮南王劉長
+- 力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥
 - 易與耳：劇辛、龍且、李廣
 
 # 雜說
@@ -41,3 +41,4 @@
 - 燕王劉定國：庶母弟妻女兒三代亂倫王
 - 江都王劉建：通姦庶母妹妹，看人淹死或被狼咬死取樂，安排宮女與羊狗交。
 - 濟東王劉彭離：熱愛扮演土匪搶劫殺人
+- 衡山王太子劉爽：為避免后媽誣陷自己，欲與之私通造把柄
