--- a/主要數據/字段說明.md
+++ b/主要數據/字段說明.md
@@ -1,32 +1,33 @@
 # 人物總表
 
 - 所有類數組數據以`|`符號分隔
+- 60000以上索引號人物為書外人物
 
-字段名稱|字段描述|字段類型|說明
+字段名稱|字段類型|說明
 --|--|--|--
 索引號|int|主鍵，唯一數值索引，每卷占200號
 慣用名|str|WIKI百科中常規用名，如無沿用其它
 通鑑名|array|通鑒內出現的指示此人的所有名稱
 通鑑目錄|int|外鍵，通鑑內首次出現的目錄編號
-出處|int|空-常規正文，此時代人物；1-臣光曰；2-常規正文，提及之後時代人物;3-常規正文，提及之前時代人物
+出處|int|空-常規正文，此時代人物；1-臣光曰；2-常規正文，提及之後時代人物；3-常規正文，提及之前時代人物；9-書外記錄關聯或聯想人物
 女性|bool|空-男；1-女；0-太監
-別稱|array|常見的別稱
-姓|str|
-名|array|可能有多個，下同
+別稱|array|常見的別稱。可能有多個，下同
+姓|array|
+名|array|
 字|array|
 號|array|
 氏|array|
 謚|array|
-生年|int|出生年，以負號表示公元前，未知為0
-卒年|int|死亡年，以負號表示公元前，未知為0
-出生月日|str|文本表示，只有月格式*，有月日格式*.*
-去世月日|str|文本表示，只有月格式*，有月日格式*.*
-得位年|int|統治者的得位年，以負號表示公元前
-失位年|int|統治者的失位年，以負號表示公元前
+生年|int|出生年。以負號表示公元前，未知為0，下同
+卒年|int|死亡年
+出生月日|str|文本表示。只有月格式*，有月日格式*.*，下同
+去世月日|str|文本表示
+得位年|int|統治者的得位年
+失位年|int|統治者的失位年
 統治政權|str|可能統治多個政權，則得位年、失位年為全部時間；若多統治政權時間不連續，只取第一個，其余簡述中說明
 從屬政權|array|可能從屬多個政權
-生僻度|int|1-維基百科無此詞條；2-維基、百度均無此詞條，散見其餘字典；3-網絡搜索中基本無此人相關檔案；4-歷史上從未記載過真名，以代稱或另一人關係名出現；5-歷史上從未記載過真名，但其余文獻有詳述，或有一定知名度
+生僻度|int|空-維基百科有此詞條；1-維基百科無，百度有此詞條；2-維基、百度均無此詞條，散見其餘字典；3-網絡搜索中基本無此人相關檔案；4-歷史上從未記載過真名，以代稱或另一人關係名出現；5-歷史上從未記載過真名，但其余文獻有詳述，或有一定知名度
 簡述|str|簡要描述此人事跡
-記載年|array|若無生卒得失年，可記錄歷史記載的活躍年份，取可查最早出現的年份。空表示來自通鑑內記載
-記載年備註|str|僅用於記載年的相關說明
-備注|str|
+記載年|array|若無生卒得失年，可記錄歷史記載的活躍年份，取可查最早出現的年份
+記載年備註|str|僅用於記載年的相關說明。如有記載年而此處無備注，表示來自通鑑內記載
+備注|str|問題考據、生僻字讀音、wiki名不一致等內容
