--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -17,7 +17,7 @@
 - 狐臭：楚懷王
 - 壁中藏書：孔鮒、伏生
 - 相面大師：呂公、劉邦、許負、唐舉
-- 感動中國好官：魏咎、卜式
+- 感動中國好官：魏咎、卜式、兒寬
 - 嘴賤：韓生、栗姬
 - 站錯隊的智者：李左車、龍且客、伍被
 - 長壽：趙佗、張蒼、伏生
@@ -32,6 +32,7 @@
 - 屠夫出身：姜子牙、聶政、樊噲、朱亥、何進、張飛
 - 力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥
 - 易與耳：劇辛、龍且、李廣
+- 刻苦讀書：朱買臣、兒寬
 
 # 雜說
 
