--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -26,7 +26,7 @@
 - 醜：楚穆王、孟嘗君、田蚡
 - 野獸搏鬥者：轅固、賈夫人、馮婕妤
 - 被污盜嫂受金：陳平、直不疑
-- 坑爹：周亞夫子
+- 坑爹：周亞夫子、公孫敬聲
 - 名廚：伊尹、易牙
 - 狗監馬監：楊得意、金日磾、李延年、蘇武
 - 屠夫出身：姜子牙、聶政、樊噲、朱亥、何進、張飛
