更新卷22人物

--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -5,7 +5,7 @@
 - 烹子食子：易牙、樂羊
 - 人力大牛：翟璜
 - 愛兵如子：吳起、李廣、衛青
-- 虐待士卒：霍去病、張飛
+- 虐待士卒：霍去病、李廣利、張飛
 - 招貓遞狗君王：無彊、宋康王
 - 餓死：齊桓公、趙武靈王、趙王劉友、周亞夫
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘
@@ -35,6 +35,7 @@
 - 刻苦讀書：朱買臣、兒寬
 - 常敗將軍：李廣、李廣利、夏侯惇、黃祖、王玄謨、李景隆
 - 漢奸：中行説、趙信、衛律
+- 媽寶：梁王劉武、昭平君
 
 # 雜說
 
