更新至卷23節4，匈奴世系整理

--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -6,7 +6,7 @@
 - 人力大牛：翟璜
 - 愛兵如子：吳起、李廣、衛青
 - 虐待士卒：霍去病、李廣利、張飛
-- 招貓遞狗君王：無彊、宋康王
+- 招貓遞狗君王：無彊、宋康王、齊湣王
 - 餓死：齊桓公、趙武靈王、趙王劉友、周亞夫
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘
 - 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母
@@ -36,6 +36,7 @@
 - 常敗將軍：李廣、李廣利、夏侯惇、黃祖、王玄謨、李景隆
 - 漢奸：中行説、趙信、衛律
 - 媽寶：梁王劉武、昭平君
+- 射天罵天：武乙、紂、宋康王、上官安
 
 # 雜說
 
