更新至卷23節5

--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -19,7 +19,7 @@
 - 相面大師：呂公、劉邦、許負、唐舉
 - 感動中國好官：魏咎、卜式、兒寬
 - 嘴賤：韓生、栗姬
-- 站錯隊的智者：李左車、龍且客、伍被
+- 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平
 - 長壽：趙佗、張蒼、伏生
 - 苦逼一生：酈寄、申屠嘉
 - 二婚皇后：薄姬、孝景王皇后
@@ -47,3 +47,4 @@
 - 江都王劉建：通姦庶母妹妹，看人淹死或被狼咬死取樂，安排宮女與羊狗交。
 - 濟東王劉彭離：熱愛扮演土匪搶劫殺人
 - 衡山王太子劉爽：為避免后媽誣陷自己，欲與之私通造把柄
+- 蒯聵：趕走親兒子，即位為王
