更新人物至23卷7節

--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -3,7 +3,7 @@
 - 拒絕升官發財：季札、子閭、王蠋
 - 後宮達人：田成子、中山靖王劉勝、田蚡、司馬炎
 - 烹子食子：易牙、樂羊
-- 人力大牛：翟璜
+- 人力大牛：翟璜、暴勝之
 - 愛兵如子：吳起、李廣、衛青
 - 虐待士卒：霍去病、李廣利、張飛
 - 招貓遞狗君王：無彊、宋康王、齊湣王
