--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -19,7 +19,7 @@
 - 相面大師：呂公、劉邦、許負、唐舉
 - 感動中國好官：魏咎、卜式、兒寬
 - 嘴賤：韓生、栗姬
-- 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平
+- 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、田豐
 - 長壽：趙佗、張蒼、伏生
 - 苦逼一生：酈寄、申屠嘉
 - 二婚皇后：薄姬、孝景王皇后
@@ -38,6 +38,8 @@
 - 漢奸：中行説、趙信、衛律
 - 媽寶：梁王劉武、昭平君
 - 射天罵天：武乙、紂、宋康王、上官安
+- 裸奔愛好者：桑扈、上官安、劉伶
+- 飆車愛好者：劉賀
 
 # 雜說
 
