更新至卷24節6，添加烏孫世系

--- a/主要數據/字段說明.md
+++ b/主要數據/字段說明.md
@@ -20,7 +20,7 @@
 謚|array|
 生年|int|出生年。以負號表示公元前，未知為0，下同
 卒年|int|死亡年
-出生月日|str|文本表示。只有月格式*，有月日格式*.*，下同
+出生月日|str|文本表示。只有月格式*，有月日格式*.*（?0日表现为*.*.），下同
 去世月日|str|文本表示
 得位年|int|統治者的得位年
 失位年|int|統治者的失位年
