人物更新至卷24節8

--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -11,7 +11,7 @@
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘
 - 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母
 - 龍陽君主：魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝
-- 絕望的父母：趙將括母、晁錯父、陳勝妻父
+- 絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年
 - 給君主獻孕婦：呂不韋、春申君
 - 口吃：韓非、周昌、司馬相如、鄧艾
 - 狐臭：楚懷王
@@ -40,6 +40,8 @@
 - 射天罵天：武乙、紂、宋康王、上官安
 - 裸奔愛好者：桑扈、上官安、劉伶
 - 飆車愛好者：劉賀
+- 變態殺人狂：劉建、劉去
+- 盜墓達人：劉去、曹操、董卓、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英
 
 # 雜說
 
@@ -47,7 +49,6 @@
 - 祖己：堅持苦孝被繼母流放致死
 - 晉景公：掉糞坑而死
 - 燕王劉定國：庶母弟妻女兒三代亂倫王
-- 江都王劉建：通姦庶母妹妹，看人淹死或被狼咬死取樂，安排宮女與羊狗交。
 - 濟東王劉彭離：熱愛扮演土匪搶劫殺人
 - 衡山王太子劉爽：為避免后媽誣陷自己，欲與之私通造把柄
 - 蒯聵：趕走親兒子，即位為王
