完成卷24，添加wiki异名字段

--- a/主要數據/字段說明.md
+++ b/主要數據/字段說明.md
@@ -1,22 +1,22 @@
 # 人物總表
 
 - 所有類數組數據以`|`符號分隔
-- 60000以上索引號人物為書外人物
+- 60000以上或負索引號人物為書外人物
 
 字段名稱|字段類型|說明
 --|--|--|--
 索引號|int|主鍵，唯一數值索引，每卷占200號
-慣用名|str|WIKI百科中常規用名，如無沿用其它
+慣用名|str|綜合慣用名，以WIKI百科查詢為基準，部分結合慣用稱呼有調整
 通鑑名|array|通鑒內出現的指示此人的所有名稱
 通鑑目錄|int|外鍵，通鑑內首次出現的目錄編號
 出處|int|空-常規正文，此時代人物；1-臣光曰；2-常規正文，提及之後時代人物；3-常規正文，提及之前時代人物；9-書外記錄關聯或聯想人物
 女性|bool|空-男；1-女；0-太監
-別稱|array|常見的別稱。可能有多個，下同
-姓|array|
+別稱|array|常見的別稱，通鑑名已有者不列。可能有多個，下同
+姓|array|約西漢中期姓氏統一，只用姓
 名|array|
 字|array|
 號|array|
-氏|array|
+氏|array|約西漢中期姓氏統一，不再用氏
 謚|array|
 生年|int|出生年。以負號表示公元前，未知為0，下同
 卒年|int|死亡年
@@ -30,4 +30,5 @@
 簡述|str|簡要描述此人事跡
 記載年|array|若無生卒得失年，可記錄歷史記載的活躍年份，取可查最早出現的年份
 記載年備註|str|僅用於記載年的相關說明。如有記載年而此處無備注，表示來自通鑑內記載
-備注|str|問題考據、生僻字讀音、wiki名不一致等內容
+wiki異名|str|如有，則wiki名為此，否則與慣用名同
+備注|str|問題考據、生僻字讀音、生卒年范圍等
