--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -17,7 +17,7 @@
 - 狐臭：楚懷王
 - 壁中藏書：孔鮒、伏生
 - 相面大師：呂公、劉邦、許負、唐舉
-- 感動中國好官：魏咎、卜式、兒寬
+- 感動中國好官：魏咎、卜式、兒寬、趙廣漢
 - 嘴賤：韓生、栗姬
 - 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、田豐
 - 長壽：趙佗、張蒼、伏生
@@ -30,10 +30,11 @@
 - 名廚：伊尹、易牙
 - 狗監：楊得意
 - 弼馬溫：金日磾、李延年、蘇武、上官桀、傅介子
+- 牧羊：卜式、路溫舒
 - 屠夫出身：姜子牙、聶政、樊噲、朱亥、何進、張飛
 - 力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥
 - 易與耳：劇辛、龍且、李廣
-- 刻苦讀書：朱買臣、兒寬
+- 刻苦讀書：朱買臣、兒寬、路溫舒
 - 常敗將軍：李廣、李廣利、夏侯惇、黃祖、王玄謨、李景隆
 - 漢奸：中行説、趙信、衛律
 - 媽寶：梁王劉武、昭平君
