--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -11,13 +11,13 @@
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘
 - 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母
 - 龍陽君主：魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝
-- 絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年
+- 絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母
 - 給君主獻孕婦：呂不韋、春申君
 - 口吃：韓非、周昌、司馬相如、鄧艾
 - 狐臭：楚懷王
 - 壁中藏書：孔鮒、伏生
 - 相面大師：呂公、劉邦、許負、唐舉
-- 感動中國好官：魏咎、卜式、兒寬、趙廣漢
+- 感動中國好官：魏咎、卜式、兒寬、趙廣漢、韓延壽
 - 嘴賤：韓生、栗姬
 - 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、田豐
 - 長壽：趙佗、張蒼、伏生
