--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -1,7 +1,7 @@
 # 奇葩序列
 
 - 拒絕升官發財：季札、子閭、王蠋
-- 後宮達人：田成子、中山靖王劉勝、田蚡、司馬炎
+- 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、司馬炎
 - 烹子食子：易牙、樂羊
 - 人力大牛：翟璜、暴勝之
 - 愛兵如子：吳起、李廣、衛青
@@ -23,7 +23,7 @@
 - 長壽：趙佗、張蒼、伏生
 - 苦逼一生：酈寄、申屠嘉
 - 二婚皇后：薄姬、孝景王皇后
-- 醜：楚穆王、孟嘗君、田蚡
+- 醜：楚穆王、孟嘗君、蔡澤、田蚡
 - 野獸搏鬥者：轅固、賈夫人、馮婕妤
 - 被污盜嫂受金：陳平、直不疑
 - 坑爹：周亞夫子、公孫敬聲
