更新卷27人物

--- a/筆記/资治通鉴27.md
+++ b/筆記/资治通鉴27.md
@@ -68,4 +68,4 @@ pie
 
 ## 31911 漢宣帝崩
 > 夏，廣川王海陽坐禽獸行->皇后曰皇太后
-- 變態殺人狂劉去被誅，漢宣帝不忍，封其子劉文。劉文子劉海陽發明了春宮圖，邀請姐妹來看，又坐禽獸行廢。這一脈變態傳承下來，新的劉海洋又用硫酸開始潑熊。
+- 變態殺人狂劉去被誅，漢宣帝不忍，封其兄劉文。劉文子劉海陽發明了春宮圖，邀請姐妹來看，又坐禽獸行廢。這一脈變態傳承下來，新的劉海洋又用硫酸開始潑熊。
