--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -10,9 +10,10 @@
 - 餓死：齊桓公、趙武靈王、趙王劉友、周亞夫
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘
 - 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母
-- 龍陽君主：魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝
 - 絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母
+- 坑爹：周亞夫子、公孫敬聲、蕭伋
 - 給君主獻孕婦：呂不韋、春申君
+- 龍陽君主：魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝
 - 口吃：韓非、周昌、司馬相如、鄧艾
 - 狐臭：楚懷王
 - 壁中藏書：孔鮒、伏生
@@ -26,7 +27,6 @@
 - 醜：楚穆王、孟嘗君、蔡澤、田蚡
 - 野獸搏鬥者：轅固、賈夫人、馮婕妤
 - 被污盜嫂受金：陳平、直不疑
-- 坑爹：周亞夫子、公孫敬聲
 - 名廚：伊尹、易牙
 - 狗監：楊得意
 - 弼馬溫：金日磾、李延年、蘇武、上官桀、傅介子
