--- a/筆記/资治通鉴28.md
+++ b/筆記/资治通鉴28.md
@@ -1,8 +1,76 @@
-> 2021/5/24->2021/5/
+> 2021/5/25->2021/5/
 
 # 320 卷二十八 汉纪二十
 
-> -48->-
+> -48->-42
 
-## 32001 
-> 
+## 32001 贡禹谏节俭
+> 春，正月，辛丑，葬孝宣皇帝于杜陵->为罪愈大矣
+- 貢禹進諫，挑皇帝好做的說，國家緊急而皇帝做不到的不說，這是包裹了忠誠的彩虹屁
+
+## 32002 蕭史黨爭
+> 匈奴呼韩邪单于复上书->石显为中书令
+- 蕭史黨爭表
+
+黨派|姓名|成分來源|事件
+--|--|--|--
+蕭黨|蕭望之|托孤，名儒|被免官，後復用，後被殺
+蕭黨|周堪|托孤，名儒|被免官，後復用，因諸葛豐上告被貶
+蕭黨|劉向|蕭望之推薦，宗室|被免官，後復用，再被免
+蕭黨|金敞|蕭望之推薦，官二代|未被牽連
+蕭黨|張猛|周堪弟子|因諸葛豐上告被貶
+史黨|史高|托孤，外戚|因朝政中被孤立，與蕭黨決裂，正常退休
+史黨|弘恭|宦官|告發蕭黨使下獄，鬥死蕭望之，病死
+史黨|石顯|宦官|告發蕭黨使下獄，鬥死蕭望之，鬥周堪張猛
+史黨|許章|外戚|召見鄭朋
+史黨|鄭朋|投機分子|投蕭黨不成反投史黨
+史黨|華龍|投機分子|品行不端蕭黨不收，與鄭朋相結
+騎墻|楊興|投機分子|常譽周堪，元帝疑問之而改口，與賈捐之謀位鬥石顯失敗
+騎墻|諸葛豐|投機分子|無緣由告罪周堪張猛使三人俱貶
+騎墻|賈捐之|投機分子|與楊興謀位鬥石顯失敗棄市
+
+- 蕭望之死充滿黑色幽默：漢元帝智商掉線，親友團人人犯傻，政敵個個頭腦清醒
+  - 弘恭石顯要讓蕭望之去廷尉，漢元帝同意了，因為不知道廷尉是監獄。好師傅蕭望之竟然沒教過漢元帝廷尉是啥，也是自作自受。
+  - 好不容易復官，蕭伋坑爹說之前蕭望之無罪，被劾不敬。
+  - 弘恭石顯說蕭望之需要再進監獄悔過，漢元帝說蕭望之估計不願意去監獄，算了吧，弘恭石顯說去一趟沒事，漢元帝同意了。
+  - 弘恭石顯調兵圍蕭望之府，蕭望之問學生朱雲意見，朱雲勸他自殺，幫忙和藥，蕭望之死。
+  - 漢元帝大驚，責問弘恭石顯，我好師傅確實不願意去監獄，現在死了咋辦？弘恭石顯脫帽謝罪，漢元帝哭了好久，放了弘恭石顯。
+  - 弘恭不久病死，石顯被提拔接替職務。為了紀念好師傅蕭望之，漢元帝每年祭祀，終其一生。
+
+## 32003 棄珠厓及貢禹用事
+> 初，武帝滅南越->多采用之
+
+## 32004 谷吉送死及郅支聯康居
+> 匈奴郅支单于自以道远->西边空虚不居者五千里
+- 谷吉羊入虎口，且是綿羊炸彈，郅支卻遇康居王，上演農夫與蛇的故事
+
+## 32005 薛廣德懸車及孔霸拒相
+> 冬，十二月，丁末，贡禹卒->戊子，侍中，卫尉王接为大司马、车骑将军
+
+## 32006 劉向諫遠小人
+> 石显惮周堪、张猛等->愈与许、史比而怨更生等
+- 舜命九官（尚書）
+
+人物|官職
+--|--
+禹|司空
+棄|后稷
+契|司徒
+皋陶|作士
+垂|共工
+益|朕虞
+伯夷|秩宗
+夔|典樂
+龍|納言
+
+## 32007 諸葛豐免及賈捐之誅
+> 是岁，夏寒，日青无光->况捐之以邪攻邪，其能免乎
+- 諸葛豐說周堪張猛有問題，漢元帝說沒證據別胡說，把諸葛豐免為庶人，周堪張猛全部貶官
+- 楊興剛升官，和哥們賈捐之喝酒。賈捐之說，啥時候拉一把，北京市長我合適啊！楊興說，你這麼有才，得當國務院秘書長啊！賈捐之說，我當國務院秘書長，你當北京市長，共產主義就實現了，我看行！第二天楊興上書，被石顯告發，二人下獄。
+
+## 32008 匡衡論災變
+> 徙清河王竟为中山王->如此之比，宜为赦矣
+
+## 32009 馮奉世平彡姐羌
+> 秋，七月，陇西羌彡姐旁种反->备要害处
+- 馮奉世要四萬人出征，軟磨硬套才給一萬二。去了打不過，還要三萬六。漢元帝直接發兵六萬，征服。又發了一萬，沒仗可打，屯兵。漢元帝在戰爭之事上也胡鬧，幸虧匈奴正亂，沒有外敵，否則漢可以亡國了。
