卷28人物完成，修正顓渠閼氏錯誤

--- a/筆記/资治通鉴28.md
+++ b/筆記/资治通鉴28.md
@@ -27,7 +27,7 @@
 史黨|華龍|投機分子|品行不端蕭黨不收，與鄭朋相結
 騎墻|楊興|投機分子|常譽周堪，元帝疑問之而改口，與賈捐之謀位鬥石顯失敗
 騎墻|諸葛豐|投機分子|無緣由告罪周堪張猛使三人俱貶
-騎墻|賈捐之|投機分子|與楊興謀位鬥石顯失敗棄市
+騎墻|賈捐之|投機分子，官二代|與楊興謀位鬥石顯失敗棄市
 
 - 蕭望之死充滿黑色幽默：漢元帝智商掉線，親友團人人犯傻，政敵個個頭腦清醒
   - 弘恭石顯要讓蕭望之去廷尉，漢元帝同意了，因為不知道廷尉是監獄。好師傅蕭望之竟然沒教過漢元帝廷尉是啥，也是自作自受。
