--- a/筆記/资治通鉴29.md
+++ b/筆記/资治通鉴29.md
@@ -47,3 +47,23 @@
 ## 32112 定嗣及漢元帝崩
 > 初，太子少好经书，宽博谨慎->上敬纳其言
 - 漢元帝技藝型人物，若做儒生，或研音樂，終會有所成就。擅長技藝者無拘無束，故舉棋不定，隨性而起，故興盡而去。用在治國之上，必然亡國，漢宣帝未易太子，果然亂漢家，而看中劉驁，更是錯上加錯
+- 金日磾及班彪世系
+
+```mermaid
+graph TB
+休屠王-->金日磾
+休屠王-->金倫
+金日磾-->金日磾長子
+金日磾-->金賞
+金日磾-->金建
+金日磾-->金日磾女
+金倫-->金安上
+金安上-->金敞
+金安上-->金岑
+金敞-->金敞女
+金敞女-->班彪
+金岑-->金欽
+班彪-->班固
+班彪-->班超
+班彪-->班昭
+```
