--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -18,7 +18,7 @@
 - 狐臭：楚懷王
 - 壁中藏書：孔鮒、伏生
 - 相面大師：呂公、劉邦、許負、唐舉
-- 感動中國好官：魏咎、卜式、兒寬、趙廣漢、韓延壽
+- 感動中國好官：魏咎、卜式、兒寬、趙廣漢、韓延壽、召信臣
 - 嘴賤：韓生、栗姬
 - 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、田豐
 - 長壽：趙佗、張蒼、伏生
@@ -34,7 +34,7 @@
 - 屠夫出身：姜子牙、聶政、樊噲、朱亥、何進、張飛
 - 力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥
 - 易與耳：劇辛、龍且、李廣
-- 刻苦讀書：朱買臣、兒寬、路溫舒
+- 刻苦讀書：朱買臣、兒寬、路溫舒、匡衡
 - 常敗將軍：李廣、李廣利、夏侯惇、黃祖、王玄謨、李景隆
 - 漢奸：中行説、趙信、衛律
 - 媽寶：梁王劉武、昭平君
@@ -45,6 +45,7 @@
 - 變態殺人狂：劉建、劉去
 - 盜墓達人：劉去、曹操、董卓、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英
 - 裝瘋：箕子、孫臏、蒯徹、韋玄成、朱棣
+- 獨眼龍：杜欽、夏侯惇
 
 # 雜說
 
