更新人物至卷30節9

--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -8,6 +8,7 @@
 - 虐待士卒：霍去病、李廣利、張飛
 - 招貓遞狗君王：無彊、宋康王、齊湣王
 - 餓死：齊桓公、趙武靈王、趙王劉友、周亞夫
+- 氣死：申屠嘉、王商
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘
 - 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母
 - 絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母
