--- a/筆記/资治通鉴31.md
+++ b/筆記/资治通鉴31.md
@@ -88,6 +88,6 @@ class 班婕妤,班昭 female
 ## 32312 漢成帝好鬼神
 > 是岁，琅邪太守朱博为左冯翊->上善其言
 
-## 32313 起義四起及梅福諫政改
+## 32313 起義四起及梅福諫重賢納言
 > 十一月，尉氏男子樊并等十三人谋反->上不纳
 - 民有三年之儲曰升平
