--- a/筆記/资治通鉴32.md
+++ b/筆記/资治通鉴32.md
@@ -48,6 +48,7 @@ class 馮媛,馮習 female
 ## 32408 淳于長誅
 > 冬，十月，甲寅，王根病免->咸自知废锢，以忧死
 - 孝成許皇后癡，以為還有故劍情深的基礎，實際早已是長門怨的節奏，終被賜死。左皇后神似山寨匈奴稱呼，聽著就不靠譜
+- 孝成許皇后，被兩姐妹坑；兩個許皇后，均被淳于害死
 
 ## 32409 翟方進大清洗及王莽當權
 > 方进智能有馀->其飾名如此
