--- a/筆記/资治通鉴34.md
+++ b/筆記/资治通鉴34.md
@@ -1,8 +1,66 @@
-> 2021/7/1->2021/7/
+> 2021/7/1->2021/7/4
 
 # 326 卷三十四 汉纪二十六
 
-> -5->-
+> -5->-3
 
-## 32601
-> 
+## 32601 四太后並立
+> 春，正月，有星孛于牵牛->不如王氏在成帝世也
+- 四太后：漢哀帝奶奶傅太后、漢哀帝妈丁太后、漢成帝皇后赵太后赵飞燕、漢成帝妈太皇太后王政君
+
+## 32602 改元誅夏賀良
+> 丞相博、御史大夫玄奏言->一岁三万七千祠云
+- 漢哀帝改元为给自己治病，冠以人民的名義。夏賀良雖誅，丞相御史之事未免，朱博自殺趙玄免，甚至繼任平當剛上任即病死。如前鼓妖之兆
+
+## 32603 朱博自殺平當死
+> 傅太后怨傅喜不已->有星孛于河鼓
+
+## 32604 王嘉諫豫養賢士
+> 夏，四月，丁酉，王嘉为丞相->天子纳而用之
+
+## 32605 東平王祝詛及西王母異象
+> 六月，立鲁顷王子部乡侯闵为王->上遂下诏封商为汝昌侯
+- 東平王劉雲未必反，息夫躬欲上位必真
+
+## 32606 斷袖封侯
+> 驸马都尉、侍中云阳董贤得幸于上->见之仄目
+- 西漢帝王男寵表
+
+皇帝|男寵
+--|--
+劉邦|籍孺
+漢惠帝|閎孺
+呂后|申食其
+前少帝|未成年
+後少帝|未成年
+漢文帝|鄧通、趙同、北宮伯子
+漢景帝|周仁
+漢武帝|韓嫣、韓說、李延年、金日磾長子（風聞衛霍）
+漢昭帝|金賞、金建（無龍陽實錘）
+劉賀|無
+漢宣帝|張彭祖（無龍陽實錘）
+漢元帝|弘恭、石顯（無龍陽實錘）
+漢成帝|張放
+漢哀帝|董賢
+漢平帝|未成年
+孺子嬰|未成年
+
+- 漢哀帝、董賢、董賢妻、董賢妹，四口之家歡樂多
+- 東平王祝詛及董賢封侯事角色表
+  - 漢哀帝：瘋狂衝動熱戀男
+  - 董賢：幸福被愛屌絲男
+  - 東平王劉雲：禍從天降工具人
+  - 息夫躬：善爬無底線的人精
+  - 鄭崇：正人君子領盒飯
+  - 傅嘉：歪門邪道手藝人
+  - 宋弘：被走後門擠掉的農村娃
+  - 王嘉：甩鍋多年老油條
+
+## 32607 武庫私賞及鮑宣上書
+> 上使中黄门发武库兵->优容之
+
+## 32608 揚雄諫受匈奴朝
+> 匈奴单于上书愿朝五年->上许之
+
+## 32609 息夫躬先入為主
+> 董贤贵幸日盛->上不听
