--- a/筆記/资治通鉴33.md
+++ b/筆記/资治通鉴33.md
@@ -14,12 +14,15 @@
 
 ```mermaid
 graph TB
-傅昭儀父-->傅昭儀
-傅昭儀父-->傅喜
-傅昭儀父-->傅晏
-傅晏-->孝哀傅皇后
-傅昭儀-->劉康
+傅太后父-->傅太后
+傅太后-->劉康
 漢元帝-->劉康
+傅太后父-->傅喜
+傅太后父-->傅晏
+傅太后父-->傅商
+傅晏-->孝哀傅皇后
+
+
 劉康-->漢哀帝
 丁姬-->漢哀帝
 
@@ -29,7 +32,7 @@ graph TB
 丁忠-->丁滿
 
 classDef female fill:#ffcccc
-class 傅昭儀,孝哀傅皇后,丁姬 female
+class 傅太后,孝哀傅皇后,丁姬 female
 ```
 
 ## 32503 罷樂府官及限田限奴
