--- a/筆記/资治通鉴35.md
+++ b/筆記/资治通鉴35.md
@@ -43,7 +43,7 @@
 
 ## 32709 衛氏留中山及群臣同聲
 > 置羲和官->帝更名衎
-- 王莽作為：有賞必須先退讓後散財，做事借太后名義，賄賂外國博功德，嚴防外戚與自己競爭，沒事多吃齋念佛，分封國除後代拉攏宗室，復古拉攏士人，善待女徒拉攏女性
+- 王莽作為：有賞必須先退讓後散財，做事借孔光太后名義，賄賂外國博功德，嚴防外戚與自己競爭，沒事多吃齋念佛，分封國除後代拉攏宗室，復古拉攏士人，善待女徒拉攏女性
 - 越裳：據說是越南；黃支：印度古國。皆為王莽賄賂，借以營造祥瑞
 - 孫寶硬剛王立，求再審馮媛、鄭崇案得罪傅太后，直言群臣同聲懟王莽，一生快意無忌，最後終老家中
 - 衛子夫後衛氏世系
