--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -11,6 +11,7 @@
 - 氣死：申屠嘉、王商
 - 哭死：張放
 - 絕食嘔血死：周亞夫、王嘉
+- 自焚：魏咎、涉間、孝平王皇后
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘
 - 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母
 - 絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母
