更新至卷36節2，添加筆記中圖表記錄

--- a/筆記/资治通鉴1.md
+++ b/筆記/资治通鉴1.md
@@ -31,7 +31,7 @@
 
 ## 10104 趙魏韩身世
 > 襄子为伯鲁之不立也->是为景侯
-- 赵世系圖
+- 趙建國前世系圖
 
 ```mermaid
 graph TB
@@ -43,7 +43,7 @@ graph TB
 趙獻子-->趙籍
 ```
 
-- 赵傳位圖
+- 赵建國前傳位圖
 
 ```mermaid
 graph TB
@@ -55,7 +55,7 @@ graph TB
 趙獻子-->趙籍
 ```
 
-- 魏传位图
+- 魏建國前传位图
 
 ```mermaid
 graph TB
@@ -63,7 +63,7 @@ graph TB
 魏襄子-->魏斯
 ```
 
-- 韩传位图
+- 韓建國前传位图
 
 ```mermaid
 graph TB
@@ -119,7 +119,7 @@ graph TB
 > 秦惠公薨->取兹方
 
 - 吴起辅谁谁强，终为知己者死。
-- 战国始秦世系图（四代乱政）
+- 秦四代亂政世系圖
 
 ```mermaid
 graph TB
@@ -133,7 +133,7 @@ graph TB
 秦灵公-->秦献公
 ```
 
-- 战国始秦传位图（四代乱政）
+- 秦四代亂政傳位圖
 
 ```mermaid
 graph TB
