--- a/筆記/资治通鉴18.md
+++ b/筆記/资治通鉴18.md
@@ -52,7 +52,7 @@
 ## 31010 推恩令及河南之战
 > 冬，赐淮南王几杖->募民徙朔方十万口
 - 文帝时战略，贾谊提议众建诸侯而少其力；景帝时战术，晁错削藩令，因过于刚猛导致七国之乱，又因斩晁错足够果断而无虞；武帝时从操作层面，主父偃以推恩令，彻底形成统一中央专制体系
-- 武帝时期汉匈战争重要战役
+- 武帝時期漢匈重要戰役
 
 战役|年代|战况
 --|--|--
