--- a/筆記/资治通鉴19.md
+++ b/筆記/资治通鉴19.md
@@ -51,7 +51,7 @@ class 刘建,太子刘爽 informer
 
 ## 31104 霍去病出山及武功爵
 > 春，二月，大将军青出定襄->官职耗废矣
-- 霍去病刚出山，国库已耗尽，开始卖武功爵
+- 武功爵表：霍去病刚出山，国库已耗尽，开始卖武功爵
 
 级别|名称
 --|--
