--- a/筆記/资治通鉴27.md
+++ b/筆記/资治通鉴27.md
@@ -10,6 +10,8 @@
 ## 31902 五單于爭立
 > 匈奴握衍朐鞮单于暴虐->乙酉朔，日有食之
 
+- 五單于爭立表
+
 單于|佣立者|備註
 --|--|--
 呼韓邪單于|姑夕王、烏禪幕、左地貴人|敗握衍朐鞮單于。居東。敗屠耆單于，降車犂單于，复敗烏藉單于。被郅支單于擊敗後降漢。
@@ -45,7 +47,7 @@
 
 ## 31909 麒麟閣十一功臣及石渠閣會議
 > 上以戎狄宾服->穀梁春秋博士
-- 麒麟閣十一功臣分佈
+- 麒麟閣十一功臣成分
   - 外戚：霍光
   - 官二代：張安世、韓增、杜延年、蘇武
   - 草根：趙充國、魏相、丙吉、蕭望之
