--- a/筆記/资治通鉴13.md
+++ b/筆記/资治通鉴13.md
@@ -7,7 +7,7 @@
 ## 30501 立诸吕
 > 冬，太后议欲立诸吕为王->太后封女弟嬃为临光侯
 - 白马王子可以屠杀白马作盟誓，故能赢得公主芳心
-- 诸吕世系图
+- 諸呂世系圖
 
 ```mermaid
 graph TB
@@ -24,6 +24,9 @@ graph TB
 吕台-->吕通
 吕台-->吕庄
 吕产-->刘恢妻
+
+classDef female fill:#ffcccc
+class 吕后,吕嬃,刘章妻,後少帝妻,刘恢妻 female
 ```
 
 - 汉惠帝挂名子嗣表
