--- a/筆記/资治通鉴29.md
+++ b/筆記/资治通鉴29.md
@@ -53,17 +53,30 @@
 graph TB
 休屠王-->金日磾
 休屠王-->金倫
+
 金日磾-->金日磾長子
 金日磾-->金賞
 金日磾-->金建
+金建-->金當父
+金當父-->金當
 金日磾-->金日磾女
+
 金倫-->金安上
+金安上-->金常
 金安上-->金敞
-金安上-->金岑
+
+金敞-->金涉
+金涉-->金湯
 金敞-->金敞女
 金敞女-->班彪
-金岑-->金欽
 班彪-->班固
 班彪-->班超
 班彪-->班昭
+
+金安上-->金岑
+金安上-->金明
+金明-->金欽
+
+classDef female fill:#ffcccc
+class 金日磾女,金敞女,班昭 female
 ```
