更新人物至卷36節5

--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -7,7 +7,7 @@
 - 愛兵如子：吳起、李廣、衛青
 - 虐待士卒：霍去病、李廣利、張飛
 - 招貓遞狗君王：無彊、宋康王、齊湣王
-- 餓死：齊桓公、趙武靈王、趙王劉友、周亞夫
+- 餓死：齊桓公、趙武靈王、齊王建、趙王劉友、周亞夫
 - 氣死：申屠嘉、王商
 - 哭死：張放
 - 絕食嘔血死：周亞夫、王嘉
