--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -13,7 +13,7 @@
 - 絕食嘔血死：周亞夫、王嘉
 - 自焚：魏咎、涉間、孝平王皇后
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘
-- 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母
+- 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母
 - 絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母
 - 坑爹：周亞夫子、公孫敬聲、蕭伋
 - 給君主獻孕婦：呂不韋、春申君
@@ -23,10 +23,10 @@
 - 壁中藏書：孔鮒、伏生
 - 相面大師：呂公、劉邦、許負、唐舉
 - 感動中國好官：魏咎、卜式、兒寬、趙廣漢、韓延壽、召信臣、嚴詡
-- 嘴賤：韓生、栗姬
+- 嘴賤：韓生、栗姬、楊修
 - 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、田豐
 - 長壽：趙佗、張蒼、伏生
-- 苦逼一生：酈寄、申屠嘉
+- 苦逼一生：酈寄、申屠嘉、孝睦皇后
 - 二婚皇后：薄姬、孝景王皇后
 - 醜：楚穆王、孟嘗君、蔡澤、田蚡
 - 野獸搏鬥者：轅固、賈夫人、馮婕妤
@@ -53,6 +53,7 @@
 - 高頻率犯罪：劉賀、劉立
 - 背鍋俠：夏侯藩
 - 殺子：石碏、金日磾、漢成帝、王立、王莽
+- 狗屎運：王興、王盛
 
 # 雜說
 
