更新至卷38節10，添加兩漢劉氏世系圖

--- a/年代專項/新朝/新末起義示意圖.md
+++ b/年代專項/新朝/新末起義示意圖.md
@@ -1,7 +1,7 @@
 ```mermaid
 gantt
 
-title 綠林赤眉起義勢力圖
+title 新末起義勢力圖
 %% 輸入時間格式
 dateFormat Y
 %% 輸出時間格式
@@ -41,6 +41,7 @@ section 赤眉軍
     徐宣:xx,18,2562d
     謝祿:xl,18,2562d
     楊音:yy,18,2562d
+    索盧恢:slh,22,1d
 section 劉盆子
     樊崇:active,fc2,after fc,732d
     徐宣:active,xx2,after xx,732d
@@ -50,4 +51,7 @@ section 群雄
   瓜田儀:gty,17,1464d
   呂母:lm,17,366d
   刁子都:dzd,18,2928d
+  馬適求:msq,20,1d
+  秦豐:qf,21,2928d
+  遲昭平:czp,21,1d
 ```
