--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -26,7 +26,7 @@
 - 嘴賤：韓生、栗姬、楊修
 - 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、田豐
 - 長壽：趙佗、張蒼、伏生
-- 苦逼一生：酈寄、申屠嘉、孝睦皇后
+- 苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍
 - 二婚皇后：薄姬、孝景王皇后
 - 醜：楚穆王、孟嘗君、蔡澤、田蚡
 - 野獸搏鬥者：轅固、賈夫人、馮婕妤
@@ -51,7 +51,7 @@
 - 裝瘋：箕子、孫臏、蒯徹、韋玄成、朱棣
 - 獨眼龍：杜欽、夏侯惇
 - 高頻率犯罪：劉賀、劉立
-- 背鍋俠：夏侯藩
+- 背鍋俠：夏侯藩、魯匡
 - 殺子：石碏、金日磾、漢成帝、王立、王莽
 - 狗屎運：王興、王盛
 
