--- a/筆記/资治通鉴37.md
+++ b/筆記/资治通鉴37.md
@@ -44,8 +44,10 @@
 
 ## 40104 五均六筦及匈奴換印
 > 国师公刘秀言->封威德子
-- 五均：國家宏觀制定、調控物價；可向國家借貸
-- 六筦：國家壟斷鹽鐵酒錢；征收山澤稅；開展官倒
+- 五均價格管制：國家宏觀制定、調控物價；可向國家借貸
+  - 五均：一絲；二綿；三布；四帛；五五穀
+- 六筦經濟管制：國家壟斷鹽鐵酒錢；征收山澤稅；開展官倒
+  - 六筦：一鹽；二酒；三鐵；四名山、大澤；五五均、賒貸；六鐵布、銅冶
 
 ## 40105 匈奴寇邊及劉氏俱廢
 > 单于始用夏侯籓求地->十二月，雷
