--- a/年代專項/新朝/新末起義政權圖.md
+++ b/年代專項/新朝/新末起義政權圖.md
@@ -59,3 +59,32 @@ section 群雄
   秦豐:qf,21,2928d
   遲昭平:czp,21,1d
 ```
+
+```mermaid
+gantt
+
+title 新末政權圖
+%% 輸入時間格式
+dateFormat Y
+%% 輸出時間格式
+axisFormat %y
+todayMarker off
+
+section 稱帝
+    王莽:wm,23,300d
+    劉玄:lxuan,23,732d
+    劉秀:lxiu,25,4392d
+    劉望:lw,23,60d
+    王郎:wl,23,366d
+    劉嬰:lying,25,366d
+    劉盆子:lpz,25,732d
+    劉永:lyong,25,732d
+    公孫述:gss,25,4026d
+    孫登:sd,26,30d
+    李憲:lxian,27,366d
+
+section 割據
+    隗囂:wx,23,3660d
+    盧芳:lf,25,4392d
+    
+```
