整理人物及政權

--- a/通用專項/歷代世系圖/兩漢劉氏世系圖.md
+++ b/通用專項/歷代世系圖/兩漢劉氏世系圖.md
@@ -8,10 +8,18 @@ graph TB
 劉買-->劉熊渠
 劉熊渠-->劉仁
 劉仁-->劉敞
+劉敞-->劉祉
+劉仁-->劉憲
+劉憲-->劉嘉
 劉仁-->劉慶
 劉熊渠--庶子-->劉利
 劉利-->劉子張
 劉子張-->劉玄
+劉子張-->劉騫
+劉利-->劉利子
+劉利子-->劉顯
+劉顯-->劉信
+劉利子-->劉賜
 
 劉買-->劉外
 劉外-->劉回
@@ -23,6 +31,8 @@ graph TB
 劉欽-->劉秀
 劉欽-->劉伯姬
 劉回-->劉良
+
+劉歙--族父-->劉秀
 
 classDef female fill:#ffcccc
 class 劉黃,劉元,劉伯姬 female
