--- a/年代專項/新朝/新末起義政權圖.md
+++ b/年代專項/新朝/新末起義政權圖.md
@@ -40,16 +40,23 @@ section 東漢
     劉秀:done,lx3,after lx2,732d
     
 section 赤眉軍
-    樊崇:fc,18,2562d
-    逄安:pa,18,2562d
-    徐宣:xx,18,2562d
-    謝祿:xl,18,2562d
-    楊音:yy,18,2562d
+    樊崇:fc,18,2196d
+    逄安:pa,18,2196d
+    徐宣:xx,18,2196d
+    謝祿:xl,18,2196d
+    楊音:yy,18,2196d
     索盧恢:slh,22,1d
-section 劉盆子
-    樊崇:active,fc2,after fc,732d
-    徐宣:active,xx2,after xx,732d
-    王匡:crit,wk4,after wk3,366d
+section __赤眉一部
+    樊崇:active,fc2,after fc,366d
+    逄安:active,pa2,after pa,366d
+section __赤眉二部
+    徐宣:active,xx2,after xx,366d
+    謝祿:active,xl2,after xl,366d
+    楊音:active,yy2,after yy,366d
+%%section 劉盆子
+%%    樊崇:active,fc2,after fc,732d
+%%    徐宣:active,xx2,after xx,732d
+%%    王匡:crit,wk4,after wk3,366d
   
 section 群雄
   瓜田儀:gty,17,1464d
@@ -85,6 +92,7 @@ section 稱帝
     李憲:lxian,27,1098d
 
 section 割據
+    秦豐:qf,24,1830d
     隗囂:wx,23,3660d
     盧芳:lf,25,4392d
     彭寵:pc,26,1098d
