--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -24,7 +24,7 @@
 - 相面大師：呂公、劉邦、許負、唐舉
 - 感動中國好官：魏咎、卜式、兒寬、趙廣漢、韓延壽、召信臣、嚴詡
 - 嘴賤：韓生、栗姬、楊修
-- 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、田豐
+- 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐
 - 長壽：趙佗、張蒼、伏生
 - 苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍
 - 二婚皇后：薄姬、孝景王皇后
