--- a/筆記/资治通鉴39.md
+++ b/筆記/资治通鉴39.md
@@ -64,3 +64,23 @@
 遼東|遼寧遼陽|
 玄菟|吉林集安，數遷|
 樂浪|朝鮮平壤|
+
+- 銅馬諸賊表
+
+勢力名|賊帥|興滅
+--|--|--
+銅馬|東山荒禿、上淮況|被劉秀破於館陶
+高湖||與銅馬餘眾合，復被劉秀破於蒲陽
+重連||與銅馬餘眾合，復被劉秀破於蒲陽
+青犢||初被鮑永破。與赤眉別帥合，被劉秀破於射犬
+上江||與赤眉別帥合，被劉秀破於射犬
+大彤|樊重|與赤眉別帥合，被劉秀破於射犬
+鐵脛||與赤眉別帥合，被劉秀破於射犬
+五幡||與赤眉別帥合，被劉秀破於射犬。被劉秀敗於元氏、北平，勝劉秀順水北，被陳俊敗於漁陽，被十三將追散殆盡
+尤來|樊崇|被劉秀敗於元氏、北平，勝劉秀順水北，被陳俊敗於漁陽，被十三將追散殆盡
+大槍||被劉秀敗於元氏、北平，勝劉秀順水北，被陳俊敗於漁陽，被十三將追散殆盡
+五校|高扈|真定戰傷賈復
+五樓|張文|
+富平|徐少|
+獲索|古師郎|
+檀鄉|董次仲|
