--- a/年代專項/新朝/新末兩漢政權圖表.md
+++ b/年代專項/新朝/新末兩漢政權圖表.md
@@ -38,7 +38,7 @@ section 玄漢
     劉秀:active,lx2,after lx,732d
     張卬:active,za2,after za,366d
 section 東漢
-    劉秀:done,lx3,after lx2,732d
+    劉秀:done,lx3,after lx2,1464d
     
 section 赤眉軍
     樊崇:fc,18,2196d
@@ -55,8 +55,8 @@ section __赤眉二部
     謝祿:active,xl2,after xl,366d
     楊音:active,yy2,after yy,366d
 section 劉盆子
-    樊崇:active,fc2,after fc,732d
-    徐宣:active,xx2,after xx,732d
+    樊崇:active,fc2,after fc,1098d
+    徐宣:active,xx2,after xx,1098d
     王匡:crit,wk4,after wk3,366d
     張卬:done,za3,after za2,732d
   
@@ -100,6 +100,7 @@ section 割據
 	劉嘉:lj,25,732d
 	尹尊:yz,25,366d
     隗囂:wx,26,2562d
+    張步:zb,27,732d
     彭寵:pc,27,732d
 ```
 
@@ -109,11 +110,11 @@ section 割據
 --|--|--|--|--|--|--|--|--
 王莽|新朝|公認朝代|始建國、天鳳、地皇|常安|9|23||被綠林軍推翻
 劉玄|玄漢|公認朝代|更始|長安|23|25|綠林軍|被赤眉軍推翻
-劉秀|東漢|公認朝代|建武|洛陽|25|220||被曹氏篡奪
+劉秀|東漢|公認朝代|建武|雒陽|25|220||被曹氏篡奪
 劉望||稱帝||汝南|23|23|嚴尤、陳茂|劉發後裔，稱帝二月被劉信斬
 王郎|趙漢|稱帝||邯鄲|23|24|劉林、李育、杜威|江湖騙子詐稱成帝子，被劉秀推翻
 劉嬰||稱帝||臨涇|25|25|方望|即孺子嬰，數月被更始帝推翻
-劉盆子||稱帝|建世|長安|25|27|赤眉軍|抓鬮稱帝，敗于劉秀
+劉盆子||稱帝|建世|長安|25|27|赤眉軍|抓鬮稱帝，降劉秀
 劉永、劉紆|梁國|稱帝||睢陽|25|27|周建、佼彊、張步、蘇茂、董憲|梁王劉武後人，籠絡各割據勢力，被蓋延馬武等破
 盧芳||稱帝||九原|25|40||江湖騙子，西平王，呼都而尸單于擁立，被光武降，復叛逃匈奴
 公孫述|成家|稱帝|龍興|成都|25|36|嚴岑、田戎|新朝官員割據益州，被吳漢推翻
@@ -124,4 +125,5 @@ section 割據
 劉嘉||割據||漢中|25|27|來歙、賈復、陳俊、李寶|劉秀族人，更始敗後割據漢中，歸順光武
 尹尊||割據||郾|25|26||玄漢官員，更始敗後割據，被賈復破降
 隗囂||割據|漢復|隴右|26|33|馬援、班彪、鄭興、杜林|玄漢官員，割據隴右稱西州上將軍
+張步||割據||齊地|27|29||
 彭寵||割據||薊城、漁陽|27|29||光武部將，被劉秀平
