更新至卷41節4

--- a/年代專項/新朝/新末兩漢政權圖表.md
+++ b/年代專項/新朝/新末兩漢政權圖表.md
@@ -88,7 +88,7 @@ section 稱帝
     王郎:wl,23,366d
     劉嬰:lying,25,1d
     劉盆子:lpz,25,732d
-    劉永:lyong,25,732d
+    劉永:lyong,25,1464d
     盧芳:lf,25,4392d
     公孫述:gss,25,4026d
     孫登:sd,26,1d
@@ -102,6 +102,7 @@ section 割據
     隗囂:wx,26,2562d
     張步:zb,27,732d
     彭寵:pc,27,732d
+    張豐:zf,27,366d
 ```
 
 ## 新末兩漢政權表
@@ -115,15 +116,16 @@ section 割據
 王郎|趙漢|稱帝||邯鄲|23|24|劉林、李育、杜威|江湖騙子詐稱成帝子，被劉秀推翻
 劉嬰||稱帝||臨涇|25|25|方望|即孺子嬰，數月被更始帝推翻
 劉盆子||稱帝|建世|長安|25|27|赤眉軍|抓鬮稱帝，降劉秀
-劉永、劉紆|梁國|稱帝||睢陽|25|27|周建、佼彊、張步、蘇茂、董憲|梁王劉武後人，籠絡各割據勢力，被蓋延馬武等破
+劉永、劉紆|梁國|稱帝||睢陽|25|29|周建、佼彊、張步、蘇茂、董憲|梁王劉武後人，籠絡各割據勢力，被蓋延馬武等破。劉紆繼立，被吳漢敗
 盧芳||稱帝||九原|25|40||江湖騙子，西平王，呼都而尸單于擁立，被光武降，復叛逃匈奴
 公孫述|成家|稱帝|龍興|成都|25|36|嚴岑、田戎|新朝官員割據益州，被吳漢推翻
 孫登||稱帝||上郡|26|26|銅馬軍殘部|被部下樂玄殺
-李憲||稱帝||廬江|27|30||新朝官員割據廬江，被劉秀敗部下殺
+李憲||稱帝||廬江|27|30||新朝官員割據廬江九郡，被劉秀敗部下殺
 秦豐||割據||南郡|24|29|嚴岑、田戎|新末反莽，自稱楚黎王，被劉秀滅
 竇融||割據||河西五郡|25|36||玄漢官員，更始敗後割據，歸降光武
 劉嘉||割據||漢中|25|27|來歙、賈復、陳俊、李寶|劉秀族人，更始敗後割據漢中，歸順光武
 尹尊||割據||郾|25|26||玄漢官員，更始敗後割據，被賈復破降
 隗囂||割據|漢復|隴右|26|33|馬援、班彪、鄭興、杜林|玄漢官員，割據隴右稱西州上將軍
-張步||割據||齊地|27|29||
+張步||割據||齊地十二郡|27|29||賊帥出身，劉永拜輔漢大將軍
 彭寵||割據||薊城、漁陽|27|29||光武部將，被劉秀平
+張豐||割據||涿郡|27|||光武官員，反漢自稱無上大將軍，自稱肘石有玉璽，被祭遵砸破
