更新至卷41節8

--- a/主要數據/字段說明.md
+++ b/主要數據/字段說明.md
@@ -9,7 +9,7 @@
 慣用名|str|綜合慣用名，以WIKI百科查詢為基準，部分結合慣用稱呼有調整
 通鑑名|array|通鑒內出現的指示此人的所有名稱
 通鑑目錄|int|外鍵，通鑑內首次出現的目錄編號
-出處|int|空-常規正文，此時代人物；1-臣光曰；2-常規正文，提及之後時代人物；3-常規正文，提及之前時代人物；9-書外記錄關聯或聯想人物
+出處|int|空-常規正文，此時代人物；1-臣光曰或其它評論；2-常規正文，提及之後時代人物；3-常規正文，提及之前時代人物；9-書外記錄關聯或聯想人物
 女性|bool|空-男；1-女；0-太監
 別稱|array|常見的別稱，通鑑名已有者不列。可能有多個，下同
 姓|array|約西漢中期姓氏統一，只用姓
