--- a/年代專項/新朝/新末兩漢政權圖表.md
+++ b/年代專項/新朝/新末兩漢政權圖表.md
@@ -127,5 +127,5 @@ section 割據
 尹尊||割據||郾|25|26||玄漢官員，更始敗後割據，被賈復破降
 隗囂||割據|漢復|隴右|26|33|馬援、班彪、鄭興、杜林|玄漢官員，割據隴右稱西州上將軍
 張步||割據||齊地十二郡|27|29||賊帥出身，劉永拜輔漢大將軍
-彭寵||割據||薊城、漁陽|27|29||光武部將，被劉秀平
+彭寵||割據||薊城、漁陽|27|29||光武部將，反漢自立為燕王，被子密綁架殺
 張豐||割據||涿郡|27|||光武官員，反漢自稱無上大將軍，自稱肘石有玉璽，被祭遵砸破
