--- a/年代專項/新朝/新末兩漢政權圖表.md
+++ b/年代專項/新朝/新末兩漢政權圖表.md
@@ -95,8 +95,9 @@ section 稱帝
     李憲:lxian,27,1098d
 
 section 割據
+    田戎:tr,23,2196d
     秦豐:qf,24,1830d
-    竇融:dr,25,4026d
+    竇融:dr,25,1464d
 	劉嘉:lj,25,732d
 	尹尊:yz,25,366d
     隗囂:wx,26,2562d
@@ -121,11 +122,12 @@ section 割據
 公孫述|成家|稱帝|龍興|成都|25|36|嚴岑、田戎|新朝官員割據益州，被吳漢推翻
 孫登||稱帝||上郡|26|26|銅馬軍殘部|被部下樂玄殺
 李憲||稱帝||廬江|27|30||新朝官員割據廬江九郡，被劉秀敗部下殺
-秦豐||割據||南郡|24|29|嚴岑、田戎|新末反莽，自稱楚黎王，被劉秀滅
-竇融||割據||河西五郡|25|36||玄漢官員，更始敗後割據，歸降光武
+田戎||割據||夷陵|23|29||群盜出身，自稱掃地大將軍，與秦豐聯合，兵敗欲降復反，敗於岑彭降公孫述
+秦豐||割據||南郡|24|29|嚴岑、田戎|新末反莽，自稱楚黎王，嫁女延岑、田戎，被劉秀滅
+竇融||割據||河西五郡|25|29||玄漢官員，更始敗後割據，遣使臣光武，實際36年正式歸漢
 劉嘉||割據||漢中|25|27|來歙、賈復、陳俊、李寶|劉秀族人，更始敗後割據漢中，歸順光武
 尹尊||割據||郾|25|26||玄漢官員，更始敗後割據，被賈復破降
-隗囂||割據|漢復|隴右|26|33|馬援、班彪、鄭興、杜林|玄漢官員，割據隴右稱西州上將軍
+隗囂||割據|漢復|隴右|26|33|馬援、班彪、鄭興、杜林|玄漢官員，割據隴右稱西州上將軍，表面臣漢實際割據
 張步||割據||齊地十二郡|27|29||賊帥出身，劉永拜輔漢大將軍
 彭寵||割據||薊城、漁陽|27|29||光武部將，反漢自立為燕王，被子密綁架殺
 張豐||割據||涿郡|27|||光武官員，反漢自稱無上大將軍，自稱肘石有玉璽，被祭遵砸破
