--- a/筆記/资治通鉴38.md
+++ b/筆記/资治通鉴38.md
@@ -67,7 +67,7 @@
 
 ## 40210 劉縯起兵舂陵
 > 初，长沙定王发生舂陵节侯买->父守及家屬坐死者六十四人
-- 漢家當興李氏為輔，讖語屢出。第一次卜者王況給李焉寫了十萬字讖書，誅死；第二次李守與全家說，最終李秩只能算是雲台二十八將的替補
+- 漢家當興李氏為輔，讖語屢出。第一次卜者王況給李焉寫了十萬字讖書，誅死；第二次李守與全家說，最終李佚只能算是雲台二十八將的替補
 
 ## 40211 小長安之戰及綠林合兵
 > 縯使族人招說新市、平林兵->尽获其辎重
