--- a/筆記/资治通鉴40.md
+++ b/筆記/资治通鉴40.md
@@ -13,6 +13,7 @@
   - 起義時間雖早，但一直不知道設旗號
   - 聽說要立個皇帝，抓鬮選皇帝，自己稱臣
   - 立了皇帝也是跟風做傀儡，從來不拜也不會用
+  - 飯局上也能打起來，殺一百多人才消停
   - 經濟來源靠搶，一路打砸搶，污辱呂后屍
 
 ## 50103 赤眉破更始及拜卓茂
@@ -31,6 +32,7 @@
 
 ## 50107 封群臣誅劉楊擢宋弘
 > 庚辰，悉封诸功臣为列侯->事不谐矣
+- 關於領導的衝動：劉邦讓陳平軍中斬樊噲，陳平押送回來處置；光武讓宗廣軍中斬王梁，宗廣押送回來處置
 
 ## 50108 彭寵延岑公孫述反
 > 帝之讨王郎也->於是盡有益州之地
