--- a/年代專項/新朝/新末兩漢政權圖表.md
+++ b/年代專項/新朝/新末兩漢政權圖表.md
@@ -117,7 +117,7 @@ section 割據
 王郎|趙漢|稱帝||邯鄲|23|24|劉林、李育、杜威|江湖騙子詐稱成帝子，被劉秀推翻
 劉嬰||稱帝||臨涇|25|25|方望|即孺子嬰，數月被更始帝推翻
 劉盆子||稱帝|建世|長安|25|27|赤眉軍|抓鬮稱帝，降劉秀
-劉永、劉紆|梁國|稱帝||睢陽|25|29|周建、佼彊、張步、蘇茂、董憲|梁王劉武後人，籠絡各割據勢力，被蓋延馬武等破。劉紆繼立，被劉秀敗，軍士斬之
+劉永、劉紆|梁國/劉梁|稱帝||睢陽|25|29|周建、佼彊、張步、蘇茂、董憲|梁王劉武後人，籠絡各割據勢力，被蓋延馬武等破。劉紆繼立，被劉秀敗，軍士斬之
 盧芳||稱帝||九原|25|40||江湖騙子，西平王，呼都而尸單于擁立為漢帝，據五郡，被光武降，復叛逃匈奴
 公孫述|成家|稱帝|龍興|成都|25|36|嚴岑、田戎|新朝官員割據益州，被吳漢推翻
 孫登||稱帝||上郡|26|26|銅馬軍殘部|被部下樂玄殺
