--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -4,7 +4,7 @@
 - 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、司馬炎
 - 烹子食子：易牙、樂羊
 - 人力大牛：翟璜、暴勝之
-- 愛兵如子：吳起、李廣、衛青
+- 愛兵如子：吳起、李廣、衛青、祭遵
 - 虐待士卒：霍去病、李廣利、張飛
 - 招貓遞狗君王：無彊、宋康王、齊湣王
 - 餓死：齊桓公、趙武靈王、齊王建、趙王劉友、周亞夫
@@ -22,7 +22,7 @@
 - 狐臭：楚懷王
 - 壁中藏書：孔鮒、伏生、陳寵曾祖陳咸
 - 相面大師：呂公、劉邦、許負、唐舉
-- 感動中國好官：魏咎、卜式、兒寬、趙廣漢、韓延壽、召信臣、嚴詡、卓茂、杜詩
+- 感動中國好官：魏咎、卜式、兒寬、趙廣漢、韓延壽、召信臣、嚴詡、卓茂、杜詩、寇恂
 - 嘴賤：韓生、栗姬、楊修
 - 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐
 - 長壽：趙佗、張蒼、伏生
