更新至卷42節9

--- a/年代專項/新朝/新末兩漢政權圖表.md
+++ b/年代專項/新朝/新末兩漢政權圖表.md
@@ -100,7 +100,7 @@ section 割據
     竇融:dr,25,1464d
 	劉嘉:lj,25,732d
 	尹尊:yz,25,366d
-    隗囂:wx,26,2562d
+    隗囂、隗純:wx,26,2928d
     張步:zb,27,732d
     彭寵:pc,27,732d
     張豐:zf,27,366d
@@ -127,7 +127,7 @@ section 割據
 竇融||割據||河西五郡|25|29||玄漢官員，更始敗後割據，遣使臣光武，實際36年正式歸漢
 劉嘉||割據||漢中|25|27|來歙、賈復、陳俊、李寶|劉秀族人，更始敗後割據漢中，歸順光武
 尹尊||割據||郾|25|26||玄漢官員，更始敗後割據，被賈復破降
-隗囂||割據|漢復|隴右|26|33|馬援、班彪、鄭興、杜林|玄漢官員，割據隴右稱西州上將軍，表面臣漢實際割據
+隗囂、隗純||割據|漢復|隴右|26|34|馬援、班彪、鄭興、杜林|玄漢官員，割據隴右稱西州上將軍，表面臣漢實際割據，左右搖擺，33年病餓怒死，34年其子降漢
 張步||割據||齊地十二郡|27|29||賊帥出身，劉永拜輔漢大將軍，割據十二郡自稱齊王，被耿弇破，殺蘇茂降漢，復反被陳俊斬
 彭寵||割據||薊城、漁陽|27|29||光武部將，反漢自立為燕王，被子密綁架殺
 張豐||割據||涿郡|27|||光武官員，反漢自稱無上大將軍，自稱肘石有玉璽，被祭遵砸破
