更新云臺二十八將及政權年代表

--- a/筆記/资治通鉴42.md
+++ b/筆記/资治通鉴42.md
@@ -74,4 +74,5 @@ class 鄧讓妻,陰麗華,孝和陰皇后 female
 
 ## 50312 征公孫述及岑彭遇刺
 > 帝自将征公孙述->故伋言及之
-- 兩漢第一刺客公孫述
+- 來歙襲斬金梁，隗囂言：何其神也；岑彭襲破侯丹，公孫述言：是何神也。
+- 兩漢第一刺客公孫述，亦何其神也
