--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -34,12 +34,12 @@
 - 名廚：伊尹、易牙
 - 狗監：楊得意
 - 弼馬溫：金日磾、李延年、蘇武、上官桀、傅介子
-- 牧羊：卜式、路溫舒
+- 牧羊：卜式、路溫舒、劉盆子
 - 屠夫出身：姜子牙、聶政、樊噲、朱亥、何進、張飛
 - 力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥
 - 易與耳：劇辛、龍且、李廣
 - 刻苦讀書：朱買臣、兒寬、路溫舒、匡衡
-- 常敗將軍：李廣、李廣利、夏侯惇、黃祖、王玄謨、李景隆
+- 常敗將軍：李廣、李廣利、鄧禹、夏侯惇、黃祖、王玄謨、李景隆
 - 漢奸：中行説、趙信、衛律
 - 媽寶：梁王劉武、昭平君
 - 射天罵天：武乙、紂、宋康王、上官安
