更新至卷43節1

--- a/年代專項/新朝/新末兩漢政權圖表.md
+++ b/年代專項/新朝/新末兩漢政權圖表.md
@@ -119,7 +119,7 @@ section 割據
 劉盆子||稱帝|建世|長安|25|27|赤眉軍|抓鬮稱帝，降劉秀
 劉永、劉紆|梁國/劉梁|稱帝||睢陽|25|29|周建、佼彊、張步、蘇茂、董憲|梁王劉武後人，籠絡各割據勢力，被蓋延馬武等破。劉紆繼立，被劉秀敗，軍士斬之
 盧芳||稱帝||九原|25|40||江湖騙子，西平王，呼都而尸單于擁立為漢帝，據五郡，被光武降，復叛逃匈奴
-公孫述|成家|稱帝|龍興|成都|25|36|嚴岑、田戎|新朝官員割據益州，被吳漢推翻
+公孫述|成家|稱帝|龍興|成都|25|36|嚴岑、田戎|新朝官員割據益州，被吳漢族滅
 孫登||稱帝||上郡|26|26|銅馬軍殘部|被部下樂玄殺
 李憲||稱帝||廬江|27|30||新朝官員割據廬江九郡，被劉秀敗部下殺
 田戎||割據||夷陵|23|29||群盜出身，自稱掃地大將軍，與秦豐聯合，兵敗欲降復反，敗於岑彭降公孫述
