更新至卷43節7

--- a/通用專項/雜項/奇葩序列.md
+++ b/通用專項/雜項/奇葩序列.md
@@ -40,7 +40,7 @@
 - 易與耳：劇辛、龍且、李廣
 - 刻苦讀書：朱買臣、兒寬、路溫舒、匡衡
 - 常敗將軍：李廣、李廣利、鄧禹、夏侯惇、黃祖、王玄謨、李景隆
-- 漢奸：中行説、趙信、衛律
+- 漢奸：中行説、趙信、衛律、盧芳
 - 媽寶：梁王劉武、昭平君
 - 射天罵天：武乙、紂、宋康王、上官安
 - 裸奔愛好者：桑扈、上官安、劉伶
@@ -56,6 +56,8 @@
 - 狗屎運：王興、王盛
 - 仁義之師：趙充國、漢光武帝
 - 奇葩爵位：羹頡侯劉信、不義侯子密
+- 女反賊：呂母、遲昭平、徵側、徵貳
+- 巨人：阮翁仲、巨毋霸
 
 # 雜說
 
