更新至卷78节5
Former-commit-id: a8ce38ce42990ed3b8d35601895ea2c65d3f795f

--- a/5_筆記/资治通鉴77.md
+++ b/5_筆記/资治通鉴77.md
@@ -107,7 +107,7 @@ graph TB
 ## 60908 孫休執政及除孫綝
 > 先是，丹杨太守李衡数以事侵琅邪王->不可谓智。”遂寝
 
-## 60909 罷守漢中及封晉公
+## 60909 斂兵聚谷及封晉公
 > 初，汉昭烈留魏延镇汉中->封晋公，加九锡
 
 ## 60910 曹髦赴死及曹奐即位
