--- a/4_通用專項/奇葩序列.md
+++ b/4_通用專項/奇葩序列.md
@@ -21,7 +21,7 @@ export_on_save:
 - 嘔血死：周亞夫、王嘉、祭肜、馬日磾、袁術、袁紹
 - 疽發背死：范增、劉焉、曹休
 - 自焚：魏咎、涉間、孝平王皇后
-- 赴戰陣殉難：關靖、于詮
+- 赴戰陣殉難：關靖、于詮、諸葛尚
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘
 - 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母
 - 絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母
