--- a/4_通用專項/奇葩序列.md
+++ b/4_通用專項/奇葩序列.md
@@ -76,7 +76,7 @@ export_on_save:
 - 盜墓達人：劉去、曹操、呂布、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英
 - 裝瘋大師：箕子、孫臏、蒯徹、韋玄成、朱棣
 - 裝死大師：杜根
-- 裝病大師：司馬懿
+- 裝病大師：司馬懿、衛瓘
 - 獨眼龍：杜欽、夏侯惇、丁儀、司馬師
 - 高頻率犯罪：劉賀、劉立
 - 背鍋俠：夏侯藩、魯匡、成濟
