--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -79,7 +79,7 @@ export_on_save:
 - 裝病大師：司馬懿、衛瓘
 - 獨眼龍：杜欽、夏侯惇、丁儀、司馬師
 - 高頻率犯罪：劉賀、劉立
-- 背鍋俠：夏侯藩、魯匡、成濟
+- 背鍋俠：夏侯藩、魯匡、成濟、馮斐
 - 殺子：石碏、金日磾、漢成帝、王立、王莽
 - 狗屎運：王興、王盛
 - 仁義之師：趙充國、漢光武帝
