更新至卷80節3，補充二十四孝人物
Former-commit-id: c4bbbc359edc25921cc1c756fcf2e379341d13af

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -9,7 +9,7 @@ export_on_save:
 - 拒絕稱帝王：季札、公子閭、劉虞
 - 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎
 - 烹子食子：易牙、樂羊
-- 人力大牛：翟璜、暴勝之、鄧騭、陳忠、王龔、曹騰、荀彧、司馬徽
+- 人力大牛：翟璜、暴勝之、鄧騭、陳忠、王龔、曹騰、荀彧、司馬徽、山濤
 - 愛兵如子：吳起、李廣、衛青、祭遵、段熲、皇甫嵩
 - 虐待士卒：霍去病、李廣利、張飛
 - 虐待動物：田單、楊琁
@@ -47,7 +47,7 @@ export_on_save:
 - 二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容
 - 醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁胤、管輅
 - 矬：周舉、張松、朱然
-- 野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮
+- 野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮、楊香
 - 被污早年失德：陳平、直不疑、第五倫
 - 名廚：伊尹、易牙
 - 狗監：楊得意
@@ -72,14 +72,14 @@ export_on_save:
 - 女裝大佬：曹叡、何晏
 - 娘砲：李固、曹植、何晏、唐伯虎
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
-- 變態殺人狂：劉建、劉去、董卓
+- 變態殺人狂：劉建、劉去、董卓、孫皓
 - 盜墓達人：劉去、曹操、呂布、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英
 - 裝瘋大師：箕子、孫臏、蒯徹、韋玄成、朱棣
 - 裝死大師：杜根
 - 裝病大師：司馬懿、衛瓘
 - 獨眼龍：杜欽、夏侯惇、丁儀、司馬師
 - 高頻率犯罪：劉賀、劉立
-- 背鍋俠：夏侯藩、魯匡、成濟、馮斐
+- 背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇
 - 殺子：石碏、金日磾、漢成帝、王立、王莽
 - 狗屎運：王興、王盛
 - 仁義之師：趙充國、漢光武帝
