--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -24,7 +24,7 @@ export_on_save:
 - 赴戰陣殉難：關靖、于詮、諸葛尚
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘
 - 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母
-- 絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母
+- 絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母、張俶父
 - 坑爹：周亞夫子、公孫敬聲、蕭伋、甄尋
 - 救父：緹縈、馮緄
 - 被後媽虐：祖己、薛苞、蔣詡、李曇、王祥
