--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -81,7 +81,7 @@ export_on_save:
 - 高頻率犯罪：劉賀、劉立
 - 背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇
 - 殺子：石碏、金日磾、漢成帝、王立、王莽
-- 狗屎運：王興、王盛
+- 狗屎運：王興、王盛、黃耇、吳平
 - 仁義之師：趙充國、漢光武帝
 - 奇葩爵位：羹頡侯劉信、不義侯子密
 - 女反賊：呂母、遲昭平、徵側、徵貳、陳碩真
