--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -15,10 +15,10 @@ export_on_save:
 - 虐待動物：田單、楊琁
 - 招貓遞狗君王：無彊、宋康王、齊湣王
 - 餓死：齊桓公、趙武靈王、齊王建、趙王劉友、周亞夫、楊喬、得來
-- 氣死：申屠嘉、王商、梁女瑩、朱穆、朱儁、陸遜
+- 氣死：申屠嘉、王商、梁女瑩、朱穆、朱儁、陸遜、羊琇、向雄
 - 死於廁所：晉景公、韓馥
 - 哭死哭瞎：子夏、張放、孝睦皇后、趙戩
-- 嘔血死：周亞夫、王嘉、祭肜、馬日磾、袁術、袁紹
+- 嘔血死：周亞夫、王嘉、祭肜、馬日磾、袁術、袁紹、司馬攸
 - 疽發背死：范增、劉焉、曹休
 - 自焚：魏咎、涉間、孝平王皇后
 - 赴戰陣殉難：關靖、于詮、諸葛尚
