更新至卷82節7
Former-commit-id: 34ffe562921f9828c06b4dc3a68b428e2b870203

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -14,7 +14,7 @@ export_on_save:
 - 虐待士卒：霍去病、李廣利、張飛
 - 虐待動物：田單、楊琁
 - 招貓遞狗君王：無彊、宋康王、齊湣王
-- 餓死：齊桓公、趙武靈王、齊王建、趙王劉友、周亞夫、楊喬、得來
+- 餓死：齊桓公、趙武靈王、齊王建、趙王劉友、周亞夫、楊喬、得來、楊芷
 - 氣死：申屠嘉、王商、梁女瑩、朱穆、朱儁、陸遜、羊琇、向雄
 - 死於廁所：晉景公、韓馥
 - 哭死哭瞎：子夏、張放、孝睦皇后、趙戩
@@ -71,6 +71,7 @@ export_on_save:
 - cosplay愛好者：濟東王劉彭離、漢靈帝
 - 女裝大佬：曹叡、何晏
 - 娘砲：李固、曹植、何晏、唐伯虎
+- 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、魯女生
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
 - 變態殺人狂：劉建、劉去、董卓、孫皓
 - 盜墓達人：劉去、曹操、呂布、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英
@@ -93,7 +94,7 @@ export_on_save:
 - 萬人迷：黃憲
 - 死忠老外：呼尤徽
 - 友方中的前朝忠良∶孝平王皇后、司馬孚
-- 起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授
+- 起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、
 - 不倒翁：叔孫通、陳平、胡廣、馮道、曹振鏞
 - 三人三對：衛靈公+彌子瑕+南子、漢哀帝+董賢+董賢妻(+董昭儀)、梁冀+孫壽+秦宮
 - 兄弟三人同床：姜肱+姜仲海+姜季江、劉備+關羽+張飛
