更新至卷83節5，添加仇池國世系圖
Former-commit-id: 512cc2afb1e1d22fa71cbf3e09b11ff898a6f7af

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -25,6 +25,7 @@ export_on_save:
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘
 - 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母
 - 絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母、張俶父
+- 清醒子女：胡毋謙之、張韙
 - 坑爹：周亞夫子、公孫敬聲、蕭伋、甄尋
 - 救父：緹縈、馮緄
 - 被後媽虐：祖己、薛苞、蔣詡、李曇、王祥
@@ -56,6 +57,7 @@ export_on_save:
 - 牧羊：楚義帝、卜式、路溫舒、劉盆子
 - 牧牛：鄧艾
 - 屠夫出身：姜子牙、聶政、樊噲、朱亥、何進
+- 屠夫家皇后：何皇后、謝玖
 - 力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥
 - 刻苦讀書：朱買臣、兒寬、路溫舒、匡衡
 - 神童：項橐、甘羅、孔融、曹沖、周不疑
