--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -22,8 +22,9 @@ export_on_save:
 - 疽發背死：范增、劉焉、曹休
 - 自焚：魏咎、涉間、孝平王皇后
 - 赴戰陣殉難：關靖、于詮、諸葛尚
+- 跳樓：揚雄、緑珠
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘
-- 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母
+- 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母、潘岳母
 - 絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母、張俶父
 - 清醒子女：胡毋謙之、張韙
 - 坑爹：周亞夫子、公孫敬聲、蕭伋、甄尋
