更新至卷84節3
Former-commit-id: 2b878cbce12e0c1cef4e27e1bea7df7c506d9181

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -77,6 +77,7 @@ export_on_save:
 - 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、魯女生
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
 - 變態殺人狂：劉建、劉去、董卓、孫皓
+- 食人魔：程昱、張方
 - 盜墓達人：劉去、曹操、呂布、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英
 - 裝瘋大師：箕子、孫臏、蒯徹、韋玄成、朱棣
 - 裝死大師：杜根
@@ -121,4 +122,5 @@ export_on_save:
 - 劉堅得：與情夫淫亂使夫班始伏床下，被殺
 - 欒巴：凈身不徹底的宦官，娶妻生子，名列八使
 - 三姓皇后：鄧猛女
+- 減肥困難：王戎子王綏`有美号而太肥，戎令食糠，而肥愈甚也。`
 - 孝感動天與祖己流放；埋兒奉母與楢山節考；臥冰求鯉與荀令傷神；哭竹生筍與子夏失明；扼虎救父與李逵背母；乳姑不怠與張蒼喝奶
